@@ -26,36 +26,40 @@ import org.apache.cxf.resource.DefaultResourceManager;
 import org.apache.cxf.resource.ResourceManager;
 import org.apache.cxf.resource.ResourceResolver;
 import org.apache.cxf.resource.SinglePropertyResolver;
-import org.junit.Assert;
+
 import org.junit.Before;
 import org.junit.Test;
 
-public class ExtensionManagerTest extends Assert {
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertSame;
+
+public class ExtensionManagerTest {
 
     private static final String EXTENSIONMANAGER_TEST_RESOURECE_NAME = "extensionManagerTest";
     private ExtensionManagerImpl manager;
     private Map<Class<?>, Object> extensions;
-    
+
     @Before
-    public  void setUp() {
+    public void setUp() {
         ResourceResolver resolver = new SinglePropertyResolver(EXTENSIONMANAGER_TEST_RESOURECE_NAME, this);
         ResourceManager rm = new DefaultResourceManager(resolver);
-        
-        extensions = new HashMap<Class<?>, Object>();
-        extensions.put(Integer.class, new Integer(0));
-        
-        manager = new ExtensionManagerImpl("test-extension.xml", 
-            Thread.currentThread().getContextClassLoader(), extensions, rm, null); 
+
+        extensions = new HashMap<>();
+        extensions.put(Integer.class, Integer.valueOf(0));
+
+        manager = new ExtensionManagerImpl("test-extension.xml",
+            Thread.currentThread().getContextClassLoader(), extensions, rm, null);
     }
-    
+
     @Test
     public void testLoadAndRegister() {
         Extension e = new Extension();
         e.setClassname("java.lang.String");
-        e.setDeferred(false);        
+        e.setDeferred(false);
         manager.loadAndRegister(e);
-        
-        
+
+
         String interfaceName = "java.lang.Runnable";
         e.setDeferred(false);
         e.setClassname("java.lang.Thread");
@@ -63,7 +67,7 @@ public class ExtensionManagerTest extends Assert {
         assertNull("Object is registered.", extensions.get(Runnable.class));
         manager.loadAndRegister(e);
         assertNotNull("Object was not registered.", extensions.get(Runnable.class));
-      
+
         interfaceName = "java.lang.Integer";
         e.setInterfaceName(interfaceName);
         e.setClassname("no.such.Class");
@@ -71,9 +75,9 @@ public class ExtensionManagerTest extends Assert {
         assertNotNull("Object is not registered.", obj);
         manager.loadAndRegister(e);
         assertSame("Registered object was replaced.", obj, extensions.get(Integer.class));
-         
-    }
-    
 
-    
+    }
+
+
+
 }
