@@ -25,8 +25,9 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.StringTokenizer;
 
-import org.apache.commons.lang.SystemUtils;
+import org.apache.commons.lang3.SystemUtils;
 import org.apache.cxf.helpers.FileUtils;
+import org.apache.cxf.helpers.JavaUtils;
 import org.apache.cxf.tools.common.CommandInterfaceUtils;
 import org.apache.cxf.tools.java2ws.JavaToWS;
 import org.apache.maven.artifact.Artifact;
@@ -53,7 +54,7 @@ public class Java2WSMojo extends AbstractMojo {
     private String className;
 
     /**
-     * @parameter  expression="${project.build.outputDirectory}"
+     * @parameter expression="${project.build.outputDirectory}"
      * @required
      */
     private String classpath;
@@ -92,15 +93,15 @@ public class Java2WSMojo extends AbstractMojo {
      * @parameter
      */
     private String address;
-    
-    
+
+
     /**
      * @parameter
      */
     private String classifier;
 
     /**
-     * @parameter  expression="${project.compileClasspathElements}"
+     * @parameter expression="${project.compileClasspathElements}"
      * @required
      */
     private List<?> classpathElements;
@@ -149,6 +150,12 @@ public class Java2WSMojo extends AbstractMojo {
      * @parameter default-value="false"
      */
     private Boolean genWrapperbean;
+
+    /**
+     * @parameter
+     */
+    private String portName;
+
 
     /**
      * Attach the generated wsdl file to the list of files to be deployed
@@ -202,7 +209,42 @@ public class Java2WSMojo extends AbstractMojo {
      */
     private String additionalJvmArgs;
 
+    /**
+     * Determines how the classpath is applied to the executed command,
+     * either as a command line argument, or as an environment variable
+     * for the executing process. Only applicable when fork is set to <code>true</code>
+     * (which is always the case for JDK 9+).
+     * <p>
+     * Primarily useful on Windows because of length limitations for command arguments,
+     * which is why the default is <code>true</code> in that case.
+     *
+     * @parameter default-value="false"
+     * @since 3.3
+     */
+    private Boolean classpathAsEnvVar;
+
     public void execute() throws MojoExecutionException {
+        boolean requiresModules = JavaUtils.isJava9Compatible();
+        if (requiresModules) {
+            // Since JEP 261 ("Jigsaw"), access to some packages must be granted
+            fork = true;
+            boolean skipXmlWsModule = JavaUtils.isJava11Compatible(); //
+            additionalJvmArgs = "--add-exports=jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED "
+                    + "--add-exports=java.xml/com.sun.org.apache.xerces.internal.impl.xs=ALL-UNNAMED "
+                    + (skipXmlWsModule ? "" : "--add-opens java.xml.ws/javax.xml.ws.wsaddressing=ALL-UNNAMED ")
+                    + "--add-opens java.base/java.security=ALL-UNNAMED "
+                    + "--add-opens java.base/java.net=ALL-UNNAMED "
+                    + "--add-opens java.base/java.lang=ALL-UNNAMED "
+                    + "--add-opens java.base/java.util=ALL-UNNAMED "
+                    + "--add-opens java.base/java.util.concurrent=ALL-UNNAMED " 
+                    + (additionalJvmArgs == null ? "" : additionalJvmArgs); 
+        }
+        if (fork && SystemUtils.IS_OS_WINDOWS) {
+            // Windows does not allow for very long command lines,
+            // so by default CLASSPATH environment variable is used.
+            classpathAsEnvVar = true;
+        }
+        System.setProperty("org.apache.cxf.JDKBugHacks.defaultUsesCaches", "true");
         if (skip) {
             getLog().info("Skipping Java2WS execution");
             return;
@@ -214,7 +256,7 @@ public class Java2WSMojo extends AbstractMojo {
             String cp = classLoaderSwitcher.switchClassLoader(project, false,
                                                               classpath, classpathElements);
             if (fork) {
-                List<String> artifactsPath = new ArrayList<String>(pluginArtifacts.size());
+                List<String> artifactsPath = new ArrayList<>(pluginArtifacts.size());
                 for (Artifact a : pluginArtifacts) {
                     File file = a.getFile();
                     if (file == null) {
@@ -227,8 +269,8 @@ public class Java2WSMojo extends AbstractMojo {
                 cp = StringUtils.join(artifactsPath.iterator(), File.pathSeparator) + File.pathSeparator + cp;
             }
 
-            List<String> args = initArgs(cp);
-            processJavaClass(args);
+            List<String> args = initArgs(classpathAsEnvVar ? null : cp);
+            processJavaClass(args, classpathAsEnvVar ? cp : null);
         } finally {
             classLoaderSwitcher.restoreClassLoader();
         }
@@ -237,17 +279,22 @@ public class Java2WSMojo extends AbstractMojo {
     }
 
     private List<String> initArgs(String cp) {
-        List<String> args = new ArrayList<String>();
+        List<String> args = new ArrayList<>();
 
         if (fork) {
-            args.add(additionalJvmArgs);
+            String[] split = additionalJvmArgs.split("\\s+");
+            for (String each : split) {
+                args.add(each);
+            }
             // @see JavaToWS#isExitOnFinish()
             args.add("-DexitOnFinish=true");
         }
 
-        // classpath arg
-        args.add("-cp");
-        args.add(cp);
+        if (!StringUtils.isEmpty(cp)) {
+            // classpath arg
+            args.add("-cp");
+            args.add(cp);
+        }
 
         if (fork) {
             args.add(JavaToWS.class.getCanonicalName());
@@ -283,12 +330,12 @@ public class Java2WSMojo extends AbstractMojo {
             }
         }
 
-        if (frontend != null) {
+        if (!StringUtils.isEmpty(frontend)) {
             args.add("-frontend");
             args.add(frontend);
         }
 
-        if (databinding != null) {
+        if (!StringUtils.isEmpty(databinding)) {
             args.add("-databinding");
             args.add(databinding);
         }
@@ -315,13 +362,13 @@ public class Java2WSMojo extends AbstractMojo {
         }
 
         // target namespace arg
-        if (targetNamespace != null) {
+        if (!StringUtils.isEmpty(targetNamespace)) {
             args.add("-t");
             args.add(targetNamespace);
         }
 
         // servicename arg
-        if (serviceName != null) {
+        if (!StringUtils.isEmpty(serviceName)) {
             args.add("-servicename");
             args.add(serviceName);
         }
@@ -337,9 +384,15 @@ public class Java2WSMojo extends AbstractMojo {
         }
 
         // address arg
-        if (address != null) {
+        if (!StringUtils.isEmpty(address)) {
             args.add("-address");
             args.add(address);
+        }
+
+        // portname arg
+        if (!StringUtils.isEmpty(portName)) {
+            args.add("-portname");
+            args.add(portName);
         }
 
         if (argline != null) {
@@ -355,11 +408,11 @@ public class Java2WSMojo extends AbstractMojo {
         return args;
     }
 
-    private void processJavaClass(List<String> args) throws MojoExecutionException {
+    private void processJavaClass(List<String> args, String cp) throws MojoExecutionException {
         if (!fork) {
             try {
                 CommandInterfaceUtils.commandCommonMain();
-                JavaToWS j2w = new JavaToWS(args.toArray(new String[args.size()]));
+                JavaToWS j2w = new JavaToWS(args.toArray(new String[0]));
                 j2w.run();
             } catch (OutOfMemoryError e) {
                 getLog().debug(e);
@@ -386,22 +439,37 @@ public class Java2WSMojo extends AbstractMojo {
                 throw new MojoExecutionException(e.getMessage(), e);
             }
 
-            cmd.addArguments(args.toArray(new String[args.size()]));
+            cmd.addArguments(args.toArray(new String[0]));
+            if (classpathAsEnvVar && !StringUtils.isEmpty(cp)) {
+                cmd.addEnvironment("CLASSPATH", cp);
+            }
 
             CommandLineUtils.StringStreamConsumer err = new CommandLineUtils.StringStreamConsumer();
             CommandLineUtils.StringStreamConsumer out = new CommandLineUtils.StringStreamConsumer();
+
+            String cmdLine = CommandLineUtils.toString(cmd.getCommandline());
 
             int exitCode;
             try {
                 exitCode = CommandLineUtils.executeCommandLine(cmd, out, err);
             } catch (CommandLineException e) {
                 getLog().debug(e);
-                throw new MojoExecutionException(e.getMessage(), e);
+                StringBuilder msg = new StringBuilder(e.getMessage());
+                if (!(fork && classpathAsEnvVar)) {
+                    msg.append('\n');
+                    msg.append("Try to run this goal using <fork>true</fork> and "
+                            + "<classpathAsEnvVar>true</classpathAsEnvVar>.");
+                }
+                msg.append('\n');
+                msg.append("Command line was: ").append(cmdLine).append('\n');
+                if (classpathAsEnvVar && !StringUtils.isEmpty(cp)) {
+                    msg.append("   CLASSPATH env: ").append(cp).append('\n');
+                }
+                msg.append('\n');
+                throw new MojoExecutionException(msg.toString(), e);
             }
 
             String output = StringUtils.isEmpty(out.getOutput()) ? null : '\n' + out.getOutput().trim();
-
-            String cmdLine = CommandLineUtils.toString(cmd.getCommandline());
 
             if (exitCode != 0) {
                 if (StringUtils.isNotEmpty(output)) {
@@ -414,7 +482,11 @@ public class Java2WSMojo extends AbstractMojo {
                     msg.append(" - ").append(err.getOutput());
                 }
                 msg.append('\n');
-                msg.append("Command line was: ").append(cmdLine).append('\n').append('\n');
+                msg.append("Command line was: ").append(cmdLine).append('\n');
+                if (classpathAsEnvVar && !StringUtils.isEmpty(cp)) {
+                    msg.append("   CLASSPATH env: ").append(cp).append('\n');
+                }
+                msg.append('\n');
 
                 throw new MojoExecutionException(msg.toString());
             }
@@ -423,7 +495,11 @@ public class Java2WSMojo extends AbstractMojo {
                 StringBuilder msg = new StringBuilder();
                 msg.append(err.getOutput());
                 msg.append('\n');
-                msg.append("Command line was: ").append(cmdLine).append('\n').append('\n');
+                msg.append("Command line was: ").append(cmdLine).append('\n');
+                if (classpathAsEnvVar && !StringUtils.isEmpty(cp)) {
+                    msg.append("   CLASSPATH env: ").append(cp).append('\n');
+                }
+                msg.append('\n');
                 throw new MojoExecutionException(msg.toString());
             }
         }
@@ -433,22 +509,19 @@ public class Java2WSMojo extends AbstractMojo {
         if (attachWsdl && outputFile != null) {
             File wsdlFile = new File(outputFile);
             if (wsdlFile.exists()) {
-                if (classifier != null) {
-                    projectHelper.attachArtifact(project, wsdlFile.getName(), classifier, wsdlFile);
-                } else {
-                    projectHelper.attachArtifact(project, wsdlFile.getName(), wsdlFile);
-                }
+                
+                
                 boolean hasWsdlAttached = false;
                 for (Artifact a : project.getAttachedArtifacts()) {
-                    if ("wsdl".equals(a.getType())) {
+                    if ("wsdl".equals(a.getType()) && classifier != null && classifier.equals(a.getClassifier())) {
                         hasWsdlAttached = true;
                     }
                 }
                 if (!hasWsdlAttached) {
                     if (classifier != null) {
-                        projectHelper.attachArtifact(project, "wsdl", classifier, wsdlFile);
+                        projectHelper.attachArtifact(project, wsdlFile.getName(), classifier, wsdlFile);
                     } else {
-                        projectHelper.attachArtifact(project, "wsdl", wsdlFile);
+                        projectHelper.attachArtifact(project, wsdlFile.getName(), wsdlFile);
                     }
                 }
             }
