@@ -21,43 +21,23 @@ package org.apache.cxf.osgi.itests;
 
 
 
-import java.io.ByteArrayOutputStream;
 import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.PrintStream;
-import java.net.DatagramSocket;
-import java.net.ServerSocket;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Dictionary;
-import java.util.Enumeration;
-import java.util.Properties;
-import java.util.concurrent.Callable;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.FutureTask;
-import java.util.concurrent.TimeUnit;
+import java.net.URISyntaxException;
 
 import javax.inject.Inject;
 
-import org.apache.felix.service.command.CommandProcessor;
-import org.apache.felix.service.command.CommandSession;
-import org.apache.karaf.features.FeaturesService;
-import org.junit.Assert;
-import org.ops4j.pax.exam.Option;
-import org.ops4j.pax.exam.ProbeBuilder;
-import org.ops4j.pax.exam.TestProbeBuilder;
-import org.ops4j.pax.exam.options.MavenUrlReference;
 import org.osgi.framework.Bundle;
 import org.osgi.framework.BundleContext;
-import org.osgi.framework.Constants;
-import org.osgi.framework.Filter;
-import org.osgi.framework.FrameworkUtil;
 import org.osgi.framework.InvalidSyntaxException;
-import org.osgi.framework.ServiceReference;
-import org.osgi.util.tracker.ServiceTracker;
+
+import org.ops4j.pax.exam.MavenUtils;
+import org.ops4j.pax.exam.Option;
+import org.ops4j.pax.exam.karaf.container.internal.JavaVersionUtil;
+import org.ops4j.pax.exam.options.MavenUrlReference;
+import org.ops4j.pax.exam.options.extra.VMOption;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
 import static org.ops4j.pax.exam.CoreOptions.composite;
 import static org.ops4j.pax.exam.CoreOptions.maven;
 import static org.ops4j.pax.exam.CoreOptions.mavenBundle;
@@ -65,312 +45,120 @@ import static org.ops4j.pax.exam.CoreOptions.systemProperty;
 import static org.ops4j.pax.exam.CoreOptions.when;
 import static org.ops4j.pax.exam.karaf.options.KarafDistributionOption.editConfigurationFilePut;
 import static org.ops4j.pax.exam.karaf.options.KarafDistributionOption.karafDistributionConfiguration;
+import static org.ops4j.pax.exam.karaf.options.KarafDistributionOption.replaceConfigurationFile;
 
 /**
- * 
+ *
  */
 public class CXFOSGiTestSupport {
-    private static final String MAVEN_DEPENDENCIES_PROPERTIES = "/META-INF/maven/dependencies.properties";
-    private static final Long COMMAND_TIMEOUT = 10000L;
-    private static final Long SERVICE_TIMEOUT = 30000L;
 
     @Inject
     protected BundleContext bundleContext;
 
-    @Inject
-    protected FeaturesService featureService;
-
-    protected ExecutorService executor = Executors.newCachedThreadPool();
-
     protected MavenUrlReference cxfUrl;
-    protected MavenUrlReference karafUrl;
-
-    /**
-     * @param probe
-     * @return
-     */
-    @ProbeBuilder
-    public TestProbeBuilder probeConfiguration(TestProbeBuilder probe) {
-        probe.setHeader(Constants.DYNAMICIMPORT_PACKAGE, "*,org.apache.felix.service.*;status=provisional");
-        return probe;
-    }
+    protected MavenUrlReference amqUrl;
+    protected MavenUrlReference springLegacyUrl;
 
     private static String getKarafVersion() {
-        String karafVersion = getVersionFromPom("org.apache.karaf/apache-karaf/version");
-        if (karafVersion == null) {
-            karafVersion = System.getProperty("cxf.karaf.version");
-        }
-        if (karafVersion == null) {
-            karafVersion = System.getProperty("karaf.version");
-        }
-        if (karafVersion == null) {
-            // setup the default version of it
-            karafVersion = "2.3.6";
-        }
-        return karafVersion;
+        return MavenUtils.getArtifactVersion("org.apache.karaf", "apache-karaf-minimal");
     }
 
-    private static String getVersionFromPom(String key) {
-        try {
-            InputStream ins = CXFOSGiTestSupport.class.getResourceAsStream(MAVEN_DEPENDENCIES_PROPERTIES);
-            Properties p = new Properties();
-            p.load(ins);
-            return p.getProperty(key);
-        } catch (Throwable t) {
-            throw new IllegalStateException(MAVEN_DEPENDENCIES_PROPERTIES + " can not be found", t);
-        }
-    }    
     /**
      * Create an {@link org.ops4j.pax.exam.Option} for using a .
-     * 
+     *
      * @return
      */
     protected Option cxfBaseConfig() {
-        karafUrl = maven().groupId("org.apache.karaf").artifactId("apache-karaf").version(getKarafVersion())
-            .type("tar.gz");
+        final MavenUrlReference karafUrl = maven().groupId("org.apache.karaf").artifactId("apache-karaf-minimal")
+                .version(getKarafVersion()).type("tar.gz");
         cxfUrl = maven().groupId("org.apache.cxf.karaf").artifactId("apache-cxf").versionAsInProject()
-            .type("xml").classifier("features");
+                .type("xml").classifier("features");
+        amqUrl = maven().groupId("org.apache.activemq")
+                .artifactId("activemq-karaf").type("xml").classifier("features").versionAsInProject();
+        springLegacyUrl = maven().groupId("org.apache.karaf.features").artifactId("spring-legacy")
+                .version(getKarafVersion()).type("xml").classifier("features");
         String localRepo = System.getProperty("localRepository");
         Object urp = System.getProperty("cxf.useRandomFirstPort");
-        return composite(karafDistributionConfiguration()
+        final File loggingCfg;
+        try {
+            loggingCfg = new File(getClass().getResource("/etc/org.ops4j.pax.logging.cfg").toURI());
+        } catch (URISyntaxException e) {
+            throw new RuntimeException(e);
+        }
+        if (JavaVersionUtil.getMajorVersion() >= 9) {
+            return composite(karafDistributionConfiguration()
                              .frameworkUrl(karafUrl)
                              .karafVersion(getKarafVersion())
                              .name("Apache Karaf")
                              .useDeployFolder(false)
                              .unpackDirectory(new File("target/paxexam/")),
-                         //DO NOT COMMIT WITH THIS LINE ENABLED!!!    
-                         //KarafDistributionOption.keepRuntimeFolder(),                         
+                         //DO NOT COMMIT WITH THIS LINE ENABLED!!!
+                         //KarafDistributionOption.keepRuntimeFolder(),
+                         //debugConfiguration(), // nor this
+                         systemProperty("pax.exam.osgi.unresolved.fail").value("true"),
                          systemProperty("java.awt.headless").value("true"),
+                         replaceConfigurationFile("etc/org.ops4j.pax.logging.cfg", loggingCfg),
+                         when(localRepo != null)
+                             .useOptions(editConfigurationFilePut("etc/org.ops4j.pax.url.mvn.cfg",
+                                                                  "org.ops4j.pax.url.mvn.localRepository",
+                                                                  localRepo)),
+                             new VMOption("--add-reads=java.xml=java.logging"),
+                             new VMOption("--add-exports=java.base/"
+                                 + "org.apache.karaf.specs.locator=java.xml,ALL-UNNAMED"),
+                             new VMOption("--patch-module"),
+                             new VMOption("java.base=lib/endorsed/org.apache.karaf.specs.locator-" 
+                             + System.getProperty("karaf.version", "4.2.2") + ".jar"),
+                             new VMOption("--patch-module"),
+                             new VMOption("java.xml=lib/endorsed/org.apache.karaf.specs.java.xml-" 
+                             + System.getProperty("karaf.version", "4.2.2") + ".jar"),
+                             new VMOption("--add-opens"),
+                             new VMOption("java.base/java.security=ALL-UNNAMED"),
+                             new VMOption("--add-opens"),
+                             new VMOption("java.base/java.net=ALL-UNNAMED"),
+                             new VMOption("--add-opens"),
+                             new VMOption("java.base/java.lang=ALL-UNNAMED"),
+                             new VMOption("--add-opens"),
+                             new VMOption("java.base/java.util=ALL-UNNAMED"),
+                             new VMOption("--add-opens"),
+                             new VMOption("java.naming/javax.naming.spi=ALL-UNNAMED"),
+                             new VMOption("--add-opens"),
+                             new VMOption("java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED"),
+                             new VMOption("--add-exports=java.base/sun.net.www.protocol.http=ALL-UNNAMED"),
+                             new VMOption("--add-exports=java.base/sun.net.www.protocol.https=ALL-UNNAMED"),
+                             new VMOption("--add-exports=java.base/sun.net.www.protocol.jar=ALL-UNNAMED"),
+                             new VMOption("--add-exports=jdk.naming.rmi/com.sun.jndi.url.rmi=ALL-UNNAMED"),
+                             new VMOption("-classpath"),
+                             new VMOption("lib/jdk9plus/*" + File.pathSeparator + "lib/boot/*"),
+                         when(urp != null).useOptions(systemProperty("cxf.useRandomFirstPort").value("true")));
+        } else {
+            return composite(karafDistributionConfiguration()
+                             .frameworkUrl(karafUrl)
+                             .karafVersion(getKarafVersion())
+                             .name("Apache Karaf")
+                             .useDeployFolder(false)
+                             .unpackDirectory(new File("target/paxexam/")),
+                         //DO NOT COMMIT WITH THIS LINE ENABLED!!!
+                         //KarafDistributionOption.keepRuntimeFolder(),
+                         //debugConfiguration(), // nor this
+                         systemProperty("pax.exam.osgi.unresolved.fail").value("true"),
+                         systemProperty("java.awt.headless").value("true"),
+                         replaceConfigurationFile("etc/org.ops4j.pax.logging.cfg", loggingCfg),
                          when(localRepo != null)
                              .useOptions(editConfigurationFilePut("etc/org.ops4j.pax.url.mvn.cfg",
                                                                   "org.ops4j.pax.url.mvn.localRepository",
                                                                   localRepo)),
                          when(urp != null).useOptions(systemProperty("cxf.useRandomFirstPort").value("true")));
+        }
     }
-    protected Option testUtils() {
+
+    protected static Option testUtils() {
         return mavenBundle().groupId("org.apache.cxf").artifactId("cxf-testutils").versionAsInProject();
-    }
-    
-    /**
-     * Executes a shell command and returns output as a String. Commands have a default timeout of 10 seconds.
-     * 
-     * @param command
-     * @return
-     */
-    protected String executeCommand(final String command) {
-        return executeCommand(command, COMMAND_TIMEOUT, false);
-    }
-
-    /**
-     * Executes a shell command and returns output as a String. Commands have a default timeout of 10 seconds.
-     * 
-     * @param command The command to execute.
-     * @param timeout The amount of time in millis to wait for the command to execute.
-     * @param silent Specifies if the command should be displayed in the screen.
-     * @return
-     */
-    protected String executeCommand(final String command, final Long timeout, final Boolean silent) {
-        String response;
-        final ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
-        final PrintStream printStream = new PrintStream(byteArrayOutputStream);
-        final CommandProcessor commandProcessor = getOsgiService(CommandProcessor.class);
-        final CommandSession commandSession = commandProcessor.createSession(System.in, printStream,
-                                                                             System.err);
-        FutureTask<String> commandFuture = new FutureTask<String>(new Callable<String>() {
-            public String call() {
-                try {
-                    if (!silent) {
-                        System.err.println(command);
-                    }
-                    commandSession.execute(command);
-                } catch (Exception e) {
-                    e.printStackTrace(System.err);
-                }
-                printStream.flush();
-                return byteArrayOutputStream.toString();
-            }
-        });
-
-        try {
-            executor.submit(commandFuture);
-            response = commandFuture.get(timeout, TimeUnit.MILLISECONDS);
-        } catch (Exception e) {
-            e.printStackTrace(System.err);
-            response = "SHELL COMMAND TIMED OUT: ";
-        }
-
-        return response;
-    }
-
-    /**
-     * Executes multiple commands inside a Single Session. Commands have a default timeout of 10 seconds.
-     * 
-     * @param commands
-     * @return
-     */
-    protected String executeCommands(final String... commands) {
-        String response;
-        final ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
-        final PrintStream printStream = new PrintStream(byteArrayOutputStream);
-        final CommandProcessor commandProcessor = getOsgiService(CommandProcessor.class);
-        final CommandSession commandSession = commandProcessor.createSession(System.in, printStream,
-                                                                             System.err);
-        FutureTask<String> commandFuture = new FutureTask<String>(new Callable<String>() {
-            public String call() {
-                try {
-                    for (String command : commands) {
-                        System.err.println(command);
-                        commandSession.execute(command);
-                    }
-                } catch (Exception e) {
-                    e.printStackTrace(System.err);
-                }
-                return byteArrayOutputStream.toString();
-            }
-        });
-
-        try {
-            executor.submit(commandFuture);
-            response = commandFuture.get(COMMAND_TIMEOUT, TimeUnit.MILLISECONDS);
-        } catch (Exception e) {
-            e.printStackTrace(System.err);
-            response = "SHELL COMMAND TIMED OUT: ";
-        }
-
-        return response;
-    }
-
-    protected Bundle getInstalledBundle(String symbolicName) {
-        for (Bundle b : bundleContext.getBundles()) {
-            if (b.getSymbolicName().equals(symbolicName)) {
-                return b;
-            }
-        }
-        for (Bundle b : bundleContext.getBundles()) {
-            System.err.println("Bundle: " + b.getSymbolicName());
-        }
-        throw new RuntimeException("Bundle " + symbolicName + " does not exist");
-    }
-
-    /*
-     * Explode the dictionary into a ,-delimited list of key=value pairs
-     */
-    private static String explode(Dictionary<String, String> dictionary) {
-        Enumeration<String> keys = dictionary.keys();
-        StringBuilder result = new StringBuilder();
-        while (keys.hasMoreElements()) {
-            Object key = keys.nextElement();
-            result.append(String.format("%s=%s", key, dictionary.get(key)));
-            if (keys.hasMoreElements()) {
-                result.append(", ");
-            }
-        }
-        return result.toString();
-    }
-
-    protected <T> T getOsgiService(Class<T> type, long timeout) {
-        return getOsgiService(type, null, timeout);
-    }
-
-    protected <T> T getOsgiService(Class<T> type) {
-        return getOsgiService(type, null, SERVICE_TIMEOUT);
-    }
-
-    @SuppressWarnings({
-        "unchecked"
-    })
-    protected <T> T getOsgiService(Class<T> type, String filter, long timeout) {
-        ServiceTracker tracker = null;
-        try {
-            String flt;
-            if (filter != null) {
-                if (filter.startsWith("(")) {
-                    flt = "(&(" + Constants.OBJECTCLASS + "=" + type.getName() + ")" + filter + ")";
-                } else {
-                    flt = "(&(" + Constants.OBJECTCLASS + "=" + type.getName() + ")(" + filter + "))";
-                }
-            } else {
-                flt = "(" + Constants.OBJECTCLASS + "=" + type.getName() + ")";
-            }
-            Filter osgiFilter = FrameworkUtil.createFilter(flt);
-            tracker = new ServiceTracker(bundleContext, osgiFilter, null);
-            tracker.open(true);
-            // Note that the tracker is not closed to keep the reference
-            // This is buggy, as the service reference may change i think
-            Object svc = type.cast(tracker.waitForService(timeout));
-            if (svc == null) {
-                Dictionary<String, String> dic = bundleContext.getBundle().getHeaders();
-                System.err.println("Test bundle headers: " + explode(dic));
-
-                for (ServiceReference ref : asCollection(bundleContext.getAllServiceReferences(null, null))) {
-                    System.err.println("ServiceReference: " + ref);
-                }
-
-                for (ServiceReference ref : asCollection(bundleContext.getAllServiceReferences(null, flt))) {
-                    System.err.println("Filtered ServiceReference: " + ref);
-                }
-
-                throw new RuntimeException("Gave up waiting for service " + flt);
-            }
-            return type.cast(svc);
-        } catch (InvalidSyntaxException e) {
-            throw new IllegalArgumentException("Invalid filter", e);
-        } catch (InterruptedException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    /**
-     * Finds a free port starting from the give port numner.
-     * 
-     * @return
-     */
-    protected int getFreePort(int port) {
-        while (!isPortAvailable(port)) {
-            port++;
-        }
-        return port;
-    }
-
-    /**
-     * Returns true if port is available for use.
-     * 
-     * @param port
-     * @return
-     */
-    public static boolean isPortAvailable(int port) {
-        ServerSocket ss = null;
-        try (DatagramSocket ds = new DatagramSocket(port)) {
-            ss = new ServerSocket(port);
-            ss.setReuseAddress(true);
-            ds.setReuseAddress(true);
-            return true;
-        } catch (IOException e) {
-            // ignore
-        } finally {
-            if (ss != null) {
-                try {
-                    ss.close();
-                } catch (IOException e) {
-                    /* should not be thrown */
-                }
-            }
-        }
-
-        return false;
-    }
-
-    /**
-     * Provides an iterable collection of references, even if the original array is null
-     */
-    private static Collection<ServiceReference> asCollection(ServiceReference[] references) {
-        return references != null ? Arrays.asList(references) : Collections.<ServiceReference> emptyList();
     }
 
     protected void assertBundleStarted(String name) {
         Bundle bundle = findBundleByName(name);
-        Assert.assertNotNull("Bundle " + name + " should be installed", bundle);
-        Assert.assertEquals("Bundle " + name + " should be started", Bundle.ACTIVE, bundle.getState());
+        assertNotNull("Bundle " + name + " should be installed", bundle);
+        assertEquals("Bundle " + name + " should be started", Bundle.ACTIVE, bundle.getState());
     }
 
     protected Bundle findBundleByName(String symbolicName) {
@@ -382,23 +170,12 @@ public class CXFOSGiTestSupport {
         return null;
     }
 
-    public void assertServicePublished(String filter, int timeout) {
-        try {
-            Filter serviceFilter = bundleContext.createFilter(filter);
-            ServiceTracker tracker = new ServiceTracker(bundleContext, serviceFilter, null);
-            tracker.open();
-            Object service = tracker.waitForService(timeout);
-            tracker.close();
-            if (service == null) {
-                throw new IllegalStateException("Expected service with filter " + filter + " was not found");
-            }
-        } catch (Exception e) {
-            throw new RuntimeException("Unexpected exception occured", e);
-        }
+    protected void assertBlueprintNamespacePublished(String namespace, long timeout)
+            throws InvalidSyntaxException, InterruptedException {
+        AbstractServerActivator.awaitService(bundleContext,
+                String.format("(&(objectClass=org.apache.aries.blueprint.NamespaceHandler)"
+                        + "(osgi.service.blueprint.namespace=%s))", namespace),
+                timeout);
     }
 
-    public void assertBlueprintNamespacePublished(String namespace, int timeout) {
-        assertServicePublished(String.format("(&(objectClass=org.apache.aries.blueprint.NamespaceHandler)"
-                                             + "(osgi.service.blueprint.namespace=%s))", namespace), timeout);
-    }
 }
