@@ -20,27 +20,28 @@ package org.apache.cxf.binding.corba.types;
 
 import javax.xml.namespace.QName;
 
-
-
 import org.apache.cxf.binding.corba.wsdl.CorbaConstants;
-import org.junit.After;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
 import org.omg.CORBA.ORB;
 import org.omg.CORBA.TCKind;
 
-public class CorbaPrimitiveHandlerTest extends Assert {
+import org.junit.After;
+import org.junit.Before;
+import org.junit.Test;
+
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
+
+public class CorbaPrimitiveHandlerTest {
 
     private ORB orb;
-    
+
     @Before
     public void setUp() throws Exception {
         java.util.Properties props = System.getProperties();
         props.put("yoko.orb.id", "CXF-CORBA-Server-Binding");
         orb = ORB.init(new String[0], props);
     }
-    
+
     @After
     public void tearDown() throws Exception {
         if (orb != null) {
@@ -55,17 +56,17 @@ public class CorbaPrimitiveHandlerTest extends Assert {
     @Test
     public void testCreateCorbaBoolean() {
         Boolean val = Boolean.FALSE;
-        CorbaPrimitiveHandler obj = 
+        CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("boolean"),
                                       CorbaConstants.NT_CORBA_BOOLEAN,
                                       orb.get_primitive_tc(TCKind.tk_boolean),
                                       null);
         assertNotNull(obj);
-        
+
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
         assertTrue(val.toString().equals(result));
-        
+
         obj.setValue(val);
         Object resultObj = obj.getValue();
         assertNotNull(resultObj);
@@ -73,22 +74,22 @@ public class CorbaPrimitiveHandlerTest extends Assert {
         Boolean boolResult = (Boolean)resultObj;
         assertTrue(boolResult.booleanValue() == val.booleanValue());
     }
-    
+
     @Test
     public void testCreateCorbaChararacter() {
         Character val = new Character('c');
-        CorbaPrimitiveHandler obj = 
+        CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("char"),
                                       CorbaConstants.NT_CORBA_CHAR,
                                       orb.get_primitive_tc(TCKind.tk_char),
                                       null);
         assertNotNull(obj);
-        
+
         //CXF corba maps the XML char type to a Byte so we need to provide the string data as a Byte value
-        Byte byteValue = new Byte((byte)val.charValue());
+        Byte byteValue = Byte.valueOf((byte)val.charValue());
         obj.setValueFromData(byteValue.toString());
         String result = obj.getDataFromValue();
-        Byte byteResult = new Byte(result);
+        Byte byteResult = Byte.valueOf(result);
         assertTrue(byteResult.byteValue() == byteValue.byteValue());
 
         // However, internally, we also hold the data as a character to make it easier to marshal the data
@@ -99,19 +100,19 @@ public class CorbaPrimitiveHandlerTest extends Assert {
         assertTrue(resultObj instanceof Character);
         Character charResult = (Character)resultObj;
         assertTrue(charResult.charValue() == val.charValue());
-        
+
     }
 
     @Test
     public void testCreateCorbaWChararacter() {
         Character val = new Character('w');
-        CorbaPrimitiveHandler obj = 
+        CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("wchar"),
                                       CorbaConstants.NT_CORBA_WCHAR,
                                       orb.get_primitive_tc(TCKind.tk_wchar),
                                       null);
         assertNotNull(obj);
-        
+
         obj.setValueFromData("w");
         String result = obj.getDataFromValue();
         assertTrue(val.charValue() == result.charAt(0));
@@ -126,14 +127,14 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaOctet() {
-        Byte val = new Byte((byte)100);
-        CorbaPrimitiveHandler obj = 
+        Byte val = Byte.valueOf((byte)100);
+        CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("octet"),
                                       CorbaConstants.NT_CORBA_OCTET,
                                       orb.get_primitive_tc(TCKind.tk_octet),
                                       null);
         assertNotNull(obj);
-        
+
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
         assertTrue(val.toString().equals(result));
@@ -145,17 +146,17 @@ public class CorbaPrimitiveHandlerTest extends Assert {
         Byte byteResult = (Byte)resultObj;
         assertTrue(byteResult.byteValue() == val.byteValue());
     }
-    
+
     @Test
     public void testCreateCorbaShort() {
-        Short val = new Short((short)1234);
-        CorbaPrimitiveHandler obj = 
+        Short val = Short.valueOf((short)1234);
+        CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("short"),
                                       CorbaConstants.NT_CORBA_SHORT,
                                       orb.get_primitive_tc(TCKind.tk_short),
                                       null);
         assertNotNull(obj);
-        
+
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
         assertTrue(val.toString().equals(result));
@@ -170,14 +171,14 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaUShort() {
-        Short val = new Short((short)4321);
-        CorbaPrimitiveHandler obj = 
+        Short val = Short.valueOf((short)4321);
+        CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("ushort"),
                                       CorbaConstants.NT_CORBA_USHORT,
                                       orb.get_primitive_tc(TCKind.tk_ushort),
                                       null);
         assertNotNull(obj);
-        
+
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
         assertTrue(val.toString().equals(result));
@@ -192,14 +193,14 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaLong() {
-        Integer val = new Integer(123456);
-        CorbaPrimitiveHandler obj = 
+        Integer val = Integer.valueOf(123456);
+        CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("long"),
                                       CorbaConstants.NT_CORBA_LONG,
                                       orb.get_primitive_tc(TCKind.tk_long),
                                       null);
         assertNotNull(obj);
-        
+
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
         assertTrue(val.toString().equals(result));
@@ -214,14 +215,14 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaULong() {
-        Integer val = new Integer(654321);
-        CorbaPrimitiveHandler obj = 
+        Integer val = Integer.valueOf(654321);
+        CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("ulong"),
                                       CorbaConstants.NT_CORBA_ULONG,
                                       orb.get_primitive_tc(TCKind.tk_ulong),
                                       null);
         assertNotNull(obj);
-        
+
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
         assertTrue(val.toString().equals(result));
@@ -236,14 +237,14 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaLongLong() {
-        Long val = new Long(123456789);
-        CorbaPrimitiveHandler obj = 
+        Long val = Long.valueOf(123456789);
+        CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("longlong"),
                                       CorbaConstants.NT_CORBA_LONGLONG,
                                       orb.get_primitive_tc(TCKind.tk_longlong),
                                       null);
         assertNotNull(obj);
-        
+
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
         assertTrue(val.toString().equals(result));
@@ -258,14 +259,14 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaULongLong() {
-        Long val = new Long(987654321);
-        CorbaPrimitiveHandler obj = 
+        Long val = Long.valueOf(987654321);
+        CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("ulonglong"),
                                       CorbaConstants.NT_CORBA_ULONGLONG,
                                       orb.get_primitive_tc(TCKind.tk_ulonglong),
                                       null);
         assertNotNull(obj);
-        
+
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
         assertTrue(val.toString().equals(result));
@@ -281,13 +282,13 @@ public class CorbaPrimitiveHandlerTest extends Assert {
     @Test
     public void testCreateCorbaFloat() {
         Float val = new Float(1234.56);
-        CorbaPrimitiveHandler obj = 
+        CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("float"),
                                       CorbaConstants.NT_CORBA_FLOAT,
                                       orb.get_primitive_tc(TCKind.tk_float),
                                       null);
         assertNotNull(obj);
-        
+
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
         assertTrue(val.toString().equals(result));
@@ -302,14 +303,14 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaDouble() {
-        Double val = new Double(123456.789);
-        CorbaPrimitiveHandler obj = 
+        Double val = Double.valueOf(123456.789);
+        CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("double"),
                                       CorbaConstants.NT_CORBA_DOUBLE,
                                       orb.get_primitive_tc(TCKind.tk_double),
                                       null);
         assertNotNull(obj);
-        
+
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
         assertTrue(val.toString().equals(result));
@@ -325,13 +326,13 @@ public class CorbaPrimitiveHandlerTest extends Assert {
     @Test
     public void testCreateCorbaString() {
         String val = "Test String";
-        CorbaPrimitiveHandler obj = 
+        CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("string"),
                                       CorbaConstants.NT_CORBA_STRING,
                                       orb.get_primitive_tc(TCKind.tk_string),
                                       null);
         assertNotNull(obj);
-        
+
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
         assertTrue(val.equals(result));
@@ -347,13 +348,13 @@ public class CorbaPrimitiveHandlerTest extends Assert {
     @Test
     public void testCreateCorbaWString() {
         String val = "Test Wide String";
-        CorbaPrimitiveHandler obj = 
+        CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("wstring"),
                                       CorbaConstants.NT_CORBA_WSTRING,
                                       orb.get_primitive_tc(TCKind.tk_wstring),
                                       null);
         assertNotNull(obj);
-        
+
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
         assertTrue(val.equals(result));
