@@ -53,6 +53,12 @@ import org.apache.ws.commons.schema.constants.Constants;
 
 import org.junit.Test;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
+
 public class BeanTest extends AbstractAegisTest {
     TypeMapping mapping;
     private AegisContext context;
@@ -488,10 +494,10 @@ public class BeanTest extends AbstractAegisTest {
         assertTrue(bigByteOk);
 
         SimpleBean bean = new SimpleBean();
-        bean.setBigByte(new Byte((byte)0xfe));
+        bean.setBigByte(Byte.valueOf((byte)0xfe));
         bean.setLittleByte((byte)0xfd);
         Element element = writeObjectToElement(type, bean, getContext());
-        Byte bb = new Byte((byte)0xfe);
+        Byte bb = Byte.valueOf((byte)0xfe);
         String bbs = bb.toString();
         assertValid("/b:root/bz:bigByte[text()='" + bbs + "']", element);
 
@@ -757,23 +763,23 @@ public class BeanTest extends AbstractAegisTest {
             this.howdy = howdy;
         }
     }
-    
+
     public interface SerializableBean extends Serializable {
         String getString();
     }
-    
+
     public interface CloneableBean extends Cloneable {
         String getString();
     }
-    
+
     public interface SimpleInterface {
         String getString();
     }
-    
+
     public interface ExtendingInterface extends SimpleInterface {
         String getAnotherString();
     }
-    
+
     public enum EnumBean {
         VALUE1, VALUE2;
     }
