@@ -34,16 +34,16 @@ import javax.xml.bind.annotation.XmlSeeAlso;
 public class Book implements Comparable<Book> {
     private String name;
     private long id;
-    private Map<Long, Chapter> chapters = new HashMap<Long, Chapter>();
-    
+    private Map<Long, Chapter> chapters = new HashMap<>();
+
     public Book() {
     }
-    
+
     public Book(String name, long id) {
         this.name = name;
         this.id = id;
     }
-    
+
     public void setName(String n) {
         name = n;
     }
@@ -51,46 +51,46 @@ public class Book implements Comparable<Book> {
     public String getName() {
         return name;
     }
-    
+
     public void setId(long i) {
         id = i;
     }
     public long getId() {
         return id;
     }
-    
+
     @Path("chapters/{chapterid}/")
     @GET
     public Chapter getChapter(@PathParam("chapterid") int chapterid) {
-        return chapters.get(new Long(chapterid));
-    }   
+        return chapters.get(Long.valueOf(chapterid));
+    }
 
     @GET
     public String getState() {
         return "";
     }
-    
-    
+
+
     public void setState(String s) {
     }
-    
-    public int hashCode() { 
-        return name.hashCode() * 37 + new Long(id).hashCode();
+
+    public int hashCode() {
+        return name.hashCode() * 37 + Long.valueOf(id).hashCode();
     }
-    
+
     public boolean equals(Object o) {
         if (!(o instanceof Book)) {
             return false;
         }
         Book other = (Book)o;
-        
+
         return other.name.equals(name) && other.id == id;
-        
+
     }
 
     public int compareTo(Book b) {
-        Long i1 = new Long(getId());
-        Long i2 = new Long(b.getId());
+        Long i1 = Long.valueOf(getId());
+        Long i2 = Long.valueOf(b.getId());
         return i1.compareTo(i2);
     }
 }
