@@ -30,15 +30,20 @@ import org.apache.cxf.javascript.JavascriptTestUtilities.JSRunnable;
 import org.apache.cxf.javascript.JavascriptTestUtilities.Notifier;
 import org.apache.cxf.javascript.fortest.AegisServiceImpl;
 import org.apache.cxf.testutil.common.TestUtil;
+import org.mozilla.javascript.Context;
+import org.springframework.context.support.GenericApplicationContext;
 
 import org.junit.Before;
 import org.junit.Test;
 
-import org.mozilla.javascript.Context;
-import org.springframework.context.support.GenericApplicationContext;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
+
 
 /*
- * We end up here with a part with isElement == true, a non-array element, 
+ * We end up here with a part with isElement == true, a non-array element,
  * but a complex type for an array of the element.
  */
 public class AegisTest extends JavascriptRhinoTest {
@@ -54,26 +59,26 @@ public class AegisTest extends JavascriptRhinoTest {
     @Override
     protected void additionalSpringConfiguration(GenericApplicationContext context) throws Exception {
     }
-    
+
     @Override
     protected String[] getConfigLocations() {
         TestUtil.getNewPortNumber("TestPort");
         return new String[] {"classpath:AegisBeans.xml"};
     }
-    
+
     @Before
     public void before() throws Exception {
-        setupRhino("aegis-service", 
+        setupRhino("aegis-service",
                    "/org/apache/cxf/javascript/AegisTests.js",
                    SchemaValidationType.BOTH);
         implementor = (AegisServiceImpl)rawImplementor;
         implementor.reset();
     }
-    
+
     private Void acceptAny(Context context) {
         LOG.info("About to call acceptAny with Raw XML" + getAddress());
         implementor.prepareToWaitForOneWay();
-        testUtilities.rhinoCall("testAnyNToServerRaw",  
+        testUtilities.rhinoCall("testAnyNToServerRaw",
                                 testUtilities.javaToJS(getAddress()));
         implementor.waitForOneWay();
         assertEquals("before items", implementor.getAcceptedString());
@@ -81,7 +86,7 @@ public class AegisTest extends JavascriptRhinoTest {
         assertNotNull(something);
         return null;
     }
-    
+
     @Test
     public void callAcceptAny() {
         testUtilities.runInsideContext(Void.class, new JSRunnable<Void>() {
@@ -90,18 +95,18 @@ public class AegisTest extends JavascriptRhinoTest {
             }
         });
     }
-    
+
     private Void acceptAnyTyped(Context context) {
         LOG.info("About to call acceptAny with Raw XML and xsi:type" + getAddress());
         implementor.prepareToWaitForOneWay();
-        testUtilities.rhinoCall("testAnyNToServerRawTyped",  
+        testUtilities.rhinoCall("testAnyNToServerRawTyped",
                                 testUtilities.javaToJS(getAddress()));
         implementor.waitForOneWay();
         Collection<Object> something = implementor.getAcceptedObjects();
         assertNotNull(something);
         return null;
     }
-    
+
     @Test
     public void callAcceptAnyTyped() {
         testUtilities.runInsideContext(Void.class, new JSRunnable<Void>() {
@@ -110,13 +115,13 @@ public class AegisTest extends JavascriptRhinoTest {
             }
         });
     }
-    
+
 
     private Void returnBeanWithAnyTypeArray(Context context) {
-        Notifier notifier = 
-            testUtilities.rhinoCallConvert("testReturningBeanWithAnyTypeArray", Notifier.class, 
+        Notifier notifier =
+            testUtilities.rhinoCallConvert("testReturningBeanWithAnyTypeArray", Notifier.class,
                                            testUtilities.javaToJS(getAddress()));
-        
+
         boolean notified = notifier.waitForJavascript(1000 * 10);
         assertTrue(notified);
         Integer errorStatus = testUtilities.rhinoEvaluateConvert("globalErrorStatus", Integer.class);
@@ -124,19 +129,19 @@ public class AegisTest extends JavascriptRhinoTest {
         String errorText = testUtilities.rhinoEvaluateConvert("globalErrorStatusText", String.class);
         assertNull(errorText);
 
-        //This method returns a 'BeanWithAnyTypeArray'. 
+        //This method returns a 'BeanWithAnyTypeArray'.
         //start by looking at the string.
         String beanString = (String)testUtilities.rhinoEvaluate("globalResponseObject._return._string");
         assertEquals("lima", beanString);
         Object o1 = testUtilities.rhinoEvaluate("globalResponseObject._return._objects._anyType[0]");
         assertNotNull(o1);
-        String marker = 
+        String marker =
             testUtilities.rhinoEvaluateConvert("globalResponseObject._return._objects._anyType[0].typeMarker",
                                                String.class);
         assertEquals("aegis_fortest_javascript_cxf_apache_org_Mammal", marker);
-        Object intValue = 
+        Object intValue =
             testUtilities.rhinoEvaluate("globalResponseObject._return._objects._anyType[1]");
-        assertEquals(new Float(42), new Float(intValue.toString()));
+        assertEquals(Float.valueOf(42), new Float(intValue.toString()));
         return null;
     }
 
