@@ -27,18 +27,25 @@ import org.apache.cxf.javascript.JavascriptTestUtilities.Notifier;
 import org.apache.cxf.javascript.fortest.SimpleRPCImpl;
 import org.apache.cxf.javascript.fortest.TestBean1;
 import org.apache.cxf.javascript.fortest.TestBean2;
-import org.junit.Before;
-import org.junit.Test;
+import org.apache.cxf.testutil.common.TestUtil;
 import org.mozilla.javascript.Context;
 import org.mozilla.javascript.Scriptable;
 import org.springframework.context.support.GenericApplicationContext;
 
+import org.junit.Before;
+import org.junit.Test;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
+
 /*
- * We end up here with a part with isElement == true, a non-array element, 
+ * We end up here with a part with isElement == true, a non-array element,
  * but a complex type for an array of the element.
  */
 
 public class RPCClientTest extends JavascriptRhinoTest {
+    public static final String PORT = TestUtil.getNewPortNumber(RPCClientTest.class);
 
     private static final Logger LOG = LogUtils.getL7dLogger(RPCClientTest.class);
 
@@ -50,31 +57,31 @@ public class RPCClientTest extends JavascriptRhinoTest {
 
     @Before
     public void before() throws Exception {
-        setupRhino("rpc-service-endpoint", 
-                   "/org/apache/cxf/javascript/RPCTests.js", 
-                   Boolean.FALSE); 
+        setupRhino("rpc-service-endpoint",
+                   "/org/apache/cxf/javascript/RPCTests.js",
+                   Boolean.FALSE);
         implementor = (SimpleRPCImpl)rawImplementor;
         implementor.resetLastValues();
     }
-    
+
     @Override
     protected void additionalSpringConfiguration(GenericApplicationContext context) throws Exception {
     }
-    
+
     @Override
     protected String[] getConfigLocations() {
         return new String[] {"classpath:RPCClientTestBeans.xml"};
     }
 
     private Void simpleCaller(Context context) {
-        
+
         LOG.info("About to call simpleTest " + getAddress());
-        Notifier notifier = 
-            testUtilities.rhinoCallConvert("simpleTest", Notifier.class, 
+        Notifier notifier =
+            testUtilities.rhinoCallConvert("simpleTest", Notifier.class,
                                            testUtilities.javaToJS(getAddress()),
                                            "String Parameter",
-                                           testUtilities.javaToJS(new Integer(1776)));
-        
+                                           testUtilities.javaToJS(Integer.valueOf(1776)));
+
         boolean notified = notifier.waitForJavascript(1000 * 10);
         assertTrue(notified);
         Integer errorStatus = testUtilities.rhinoEvaluateConvert("globalErrorStatus", Integer.class);
@@ -91,51 +98,6 @@ public class RPCClientTest extends JavascriptRhinoTest {
         return null;
     }
 
-    private Void beanFunctionCaller(Context context) {
-        
-        TestBean1 b1 = new TestBean1(); 
-        b1.stringItem = "strung";
-        TestBean1[] beans = new TestBean1[3];
-        beans[0] = new TestBean1();
-        beans[0].stringItem = "zerobean";
-        beans[0].beanTwoNotRequiredItem = new TestBean2("bean2");
-        beans[1] = null;
-        beans[2] = new TestBean1();
-        beans[2].stringItem = "twobean";
-        beans[2].optionalIntArrayItem = new int[2];
-        beans[2].optionalIntArrayItem[0] = 4;
-        beans[2].optionalIntArrayItem[1] = 6;
-        
-        Object[] jsBeans = new Object[3];
-        jsBeans[0] = testBean1ToJS(testUtilities, context, beans[0]);
-        jsBeans[1] = null;
-        jsBeans[2] = testBean1ToJS(testUtilities, context, beans[2]);
-        
-        Scriptable jsBean1 = testBean1ToJS(testUtilities, context, b1);
-        Scriptable jsBeanArray = context.newArray(testUtilities.getRhinoScope(), jsBeans);
-        
-        LOG.info("About to call beanFunctionTest " + getAddress());
-        Notifier notifier = 
-            testUtilities.rhinoCallConvert("beanFunctionTest", Notifier.class, 
-                                           testUtilities.javaToJS(getAddress()),
-                                           jsBean1,
-                                           jsBeanArray);
-        boolean notified = notifier.waitForJavascript(1000 * 10);
-        assertTrue(notified);
-        Integer errorStatus = testUtilities.rhinoEvaluateConvert("globalErrorStatus", Integer.class);
-        assertNull(errorStatus);
-        String errorText = testUtilities.rhinoEvaluateConvert("globalErrorStatusText", String.class);
-        assertNull(errorText);
-
-        // this method returns void.
-        Scriptable responseObject = (Scriptable)testUtilities.rhinoEvaluate("globalResponseObject");
-        // there is no response, this thing returns 'void'
-        assertNull(responseObject);
-        SimpleRPCImpl impl = getBean(SimpleRPCImpl.class, "rpc-service");
-        TestBean1 b1returned = impl.getLastBean();
-        assertEquals(b1, b1returned);
-        return null;
-    }
 
     @Test
     public void callSimple() {
@@ -145,28 +107,18 @@ public class RPCClientTest extends JavascriptRhinoTest {
             public Void run(Context context) {
                 return simpleCaller(context);
             }
-            
-        });
-    }
-    
-    @org.junit.Ignore
-    @Test
-    public void callFunctionWithBeans() {
-        LOG.info("about to call beanFunctionTest");
-        testUtilities.runInsideContext(Void.class, new JSRunnable<Void>() {
-            public Void run(Context context) {
-                return beanFunctionCaller(context);
-            }
+
         });
     }
 
+
     public static Scriptable testBean1ToJS(JavascriptTestUtilities testUtilities,
-                                           Context context, 
+                                           Context context,
                                            TestBean1 b1) {
         if (b1 == null) {
             return null; // black is always in fashion. (Really, we can be called with a null).
         }
-        Scriptable rv = context.newObject(testUtilities.getRhinoScope(), 
+        Scriptable rv = context.newObject(testUtilities.getRhinoScope(),
                                           "org_apache_cxf_javascript_testns_testBean1");
         testUtilities.rhinoCallMethod(rv, "setStringItem", testUtilities.javaToJS(b1.stringItem));
         testUtilities.rhinoCallMethod(rv, "setIntItem", testUtilities.javaToJS(b1.intItem));
@@ -178,9 +130,9 @@ public class RPCClientTest extends JavascriptRhinoTest {
         testUtilities.rhinoCallMethod(rv, "setDoubleItem", testUtilities.javaToJS(b1.doubleItem));
         testUtilities.rhinoCallMethod(rv, "setBeanTwoItem", testBean2ToJS(testUtilities,
                                                                           context, b1.beanTwoItem));
-        testUtilities.rhinoCallMethod(rv, "setBeanTwoNotRequiredItem", 
+        testUtilities.rhinoCallMethod(rv, "setBeanTwoNotRequiredItem",
                                       testBean2ToJS(testUtilities, context, b1.beanTwoNotRequiredItem));
-        return rv; 
+        return rv;
     }
 
     public static Object testBean2ToJS(JavascriptTestUtilities testUtilities,
@@ -188,7 +140,7 @@ public class RPCClientTest extends JavascriptRhinoTest {
         if (beanTwoItem == null) {
             return null;
         }
-        Scriptable rv = context.newObject(testUtilities.getRhinoScope(), 
+        Scriptable rv = context.newObject(testUtilities.getRhinoScope(),
                                           "org_apache_cxf_javascript_testns3_testBean2");
         testUtilities.rhinoCallMethod(rv, "setStringItem", beanTwoItem.stringItem);
         return rv;
