@@ -32,27 +32,27 @@ import org.apache.cxf.jaxws.JaxWsProxyFactoryBean;
 import org.apache.cxf.systest.aegis.bean.Item;
 import org.apache.cxf.testutil.common.TestUtil;
 import org.apache.cxf.ws.security.wss4j.WSS4JOutInterceptor;
+import org.springframework.test.context.ContextConfiguration;
+import org.springframework.test.context.junit4.AbstractJUnit4SpringContextTests;
 
 import org.junit.Assert;
 import org.junit.Test;
 
-import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.junit4.AbstractJUnit4SpringContextTests;
 
 /**
- * 
+ *
  */
 @ContextConfiguration(locations = { "classpath:aegisJaxWsBeans.xml" })
 public class AegisJaxWsTest extends AbstractJUnit4SpringContextTests {
     static final String PORT = TestUtil.getPortNumber(AegisJaxWsTest.class);
 
     private AegisJaxWs client;
-    
+
     public AegisJaxWsTest() {
     }
-    
+
     private void setupForTest(boolean sec) throws Exception {
-        
+
         JaxWsProxyFactoryBean factory = new JaxWsProxyFactoryBean();
         factory.setServiceClass(AegisJaxWs.class);
         if (sec) {
@@ -61,18 +61,18 @@ public class AegisJaxWsTest extends AbstractJUnit4SpringContextTests {
             wss4jOut.setProperty("action", "UsernameToken");
             wss4jOut.setProperty("user", "alice");
             wss4jOut.setProperty("password", "pass");
-            
+
             factory.setProperties(new HashMap<String, Object>());
             factory.getProperties().put("password", "pass");
             factory.getOutInterceptors().add(wss4jOut);
         } else {
-            factory.setAddress("http://localhost:" + PORT + "/aegisJaxWs");            
+            factory.setAddress("http://localhost:" + PORT + "/aegisJaxWs");
         }
         factory.getServiceFactory().setDataBinding(new AegisDatabinding());
 
         client = (AegisJaxWs)factory.create();
     }
-    
+
     @Test
     public void testGetItemSecure() throws Exception {
         setupForTest(true);
@@ -80,7 +80,7 @@ public class AegisJaxWsTest extends AbstractJUnit4SpringContextTests {
         Assert.assertEquals(33, item.getKey().intValue());
         Assert.assertEquals("   jack&jill   :b", item.getData());
     }
-    
+
     @Test
     public void testGetItem() throws Exception {
         setupForTest(false);
@@ -88,14 +88,14 @@ public class AegisJaxWsTest extends AbstractJUnit4SpringContextTests {
         Assert.assertEquals(33, item.getKey().intValue());
         Assert.assertEquals(" a :b", item.getData());
     }
-    @Test 
+    @Test
     public void testMapSpecified() throws Exception {
         setupForTest(false);
         Item item = new Item();
-        item.setKey(new Integer(42));
+        item.setKey(Integer.valueOf(42));
         item.setData("Godzilla");
         client.addItem(item);
-        
+
         Map<Integer, Item> items = client.getItemsMapSpecified();
         Assert.assertNotNull(items);
         Assert.assertEquals(1, items.size());
@@ -112,7 +112,7 @@ public class AegisJaxWsTest extends AbstractJUnit4SpringContextTests {
 
         Integer soucet = client.getSimpleValue(5, "aa");
         //this one fail, when comment org.apache.cxf.systest.aegis.AegisJaxWs.getStringList test pass
-        Assert.assertEquals(new Integer(5), soucet);
+        Assert.assertEquals(Integer.valueOf(5), soucet);
 
         List<String> item = client.getStringList();
         Assert.assertEquals(Arrays.asList("a", "b", "c"), item);
@@ -120,34 +120,34 @@ public class AegisJaxWsTest extends AbstractJUnit4SpringContextTests {
     @Test
     public void testBigList() throws Exception {
         int size = 1000;
-        List<String> l = new ArrayList<String>(size);
+        List<String> l = new ArrayList<>(size);
         for (int x = 0; x < size; x++) {
             l.add("Need to create a pretty big soap message to make sure we go over "
                   + "some of the default buffer sizes and such so we can see what really"
                   + "happens when we do that - " + x);
         }
-        
+
         setupForTest(false);
         List<String> item = client.echoBigList(l);
         Assert.assertEquals(size, item.size());
-        
+
         //CXF-2768
         File f = FileUtils.getDefaultTempDir();
         Assert.assertEquals(0, f.listFiles().length);
     }
-    
-    @Test 
+
+    @Test
     //CXF-3376
     public void testByteArray() throws Exception {
         int size = 50;
-        List<Integer> ints = new ArrayList<Integer>(size);
+        List<Integer> ints = new ArrayList<>(size);
         for (int x = 0; x < size; x++) {
             ints.add(x);
-        }        
+        }
         setupForTest(false);
         byte[] bytes = client.export(ints);
         Assert.assertNotNull(bytes);
         Assert.assertTrue(bytes.length > 50);
-        
+
     }
 }
