@@ -52,10 +52,11 @@ import javax.ws.rs.ext.Providers;
 import org.apache.cxf.Bus;
 import org.apache.cxf.BusFactory;
 import org.apache.cxf.common.util.PropertyUtils;
+import org.apache.cxf.ext.logging.LoggingInInterceptor;
+import org.apache.cxf.ext.logging.LoggingOutInterceptor;
 import org.apache.cxf.helpers.CastUtils;
 import org.apache.cxf.interceptor.Fault;
 import org.apache.cxf.interceptor.Interceptor;
-import org.apache.cxf.interceptor.LoggingInInterceptor;
 import org.apache.cxf.jaxrs.JAXRSServerFactoryBean;
 import org.apache.cxf.jaxrs.client.ResponseExceptionMapper;
 import org.apache.cxf.jaxrs.ext.search.QueryContextProvider;
@@ -72,24 +73,24 @@ import org.apache.cxf.phase.AbstractPhaseInterceptor;
 import org.apache.cxf.phase.Phase;
 import org.apache.cxf.systest.jaxrs.BookStore.BookNotReturnedException;
 import org.apache.cxf.testutil.common.AbstractBusTestServerBase;
-    
+
 public class BookServer extends AbstractBusTestServerBase {
     public static final String PORT = allocatePort(BookServer.class);
-     
+
     org.apache.cxf.endpoint.Server server;
     private Map< ? extends String, ? extends Object > properties;
-    
+
     public BookServer() {
         this(Collections.< String, Object >emptyMap());
     }
-    
+
     /**
      * Allow to specified custom contextual properties to be passed to factory bean
      */
     public BookServer(final Map< ? extends String, ? extends Object > properties) {
         this.properties = properties;
     }
-    
+
     protected void run() {
         Bus bus = BusFactory.getDefaultBus();
         bus.setProperty(ExceptionMapper.class.getName(), new BusMapperExceptionMapper());
@@ -97,10 +98,10 @@ public class BookServer extends AbstractBusTestServerBase {
         JAXRSServerFactoryBean sf = new JAXRSServerFactoryBean();
         sf.setBus(bus);
         sf.setResourceClasses(BookStore.class, SimpleBookStore.class, BookStorePerRequest.class);
-        List<Object> providers = new ArrayList<Object>();
-        
+        List<Object> providers = new ArrayList<>();
+
         //default lifecycle is per-request, change it to singleton
-        BinaryDataProvider<Object> p = new BinaryDataProvider<Object>();
+        BinaryDataProvider<Object> p = new BinaryDataProvider<>();
         p.setProduceMediaTypes(Collections.singletonList("application/bar"));
         p.setEnableBuffering(true);
         p.setReportByteArraySize(true);
@@ -111,8 +112,8 @@ public class BookServer extends AbstractBusTestServerBase {
         providers.add(new BookStore.StringListBodyReaderWriter());
         providers.add(new StreamingResponseProvider<Object>());
         providers.add(new ContentTypeModifyingMBW());
-        JAXBElementProvider<?> jaxbProvider = new JAXBElementProvider<Object>();
-        Map<String, String> jaxbElementClassMap = new HashMap<String, String>(); 
+        JAXBElementProvider<?> jaxbProvider = new JAXBElementProvider<>();
+        Map<String, String> jaxbElementClassMap = new HashMap<>();
         jaxbElementClassMap.put(BookNoXmlRootElement.class.getName(), "BookNoXmlRootElement");
         jaxbProvider.setJaxbElementClassMap(jaxbElementClassMap);
         providers.add(jaxbProvider);
@@ -126,15 +127,15 @@ public class BookServer extends AbstractBusTestServerBase {
         providers.add(new BlockedExceptionMapper());
         providers.add(new ParamConverterImpl());
         sf.setProviders(providers);
-        List<Interceptor<? extends Message>> inInts = new ArrayList<Interceptor<? extends Message>>();
+        List<Interceptor<? extends Message>> inInts = new ArrayList<>();
         inInts.add(new CustomInFaultyInterceptor());
         inInts.add(new LoggingInInterceptor());
-        
         sf.setInInterceptors(inInts);
-        List<Interceptor<? extends Message>> outInts = new ArrayList<Interceptor<? extends Message>>();
+        List<Interceptor<? extends Message>> outInts = new ArrayList<>();
         outInts.add(new CustomOutInterceptor());
+        outInts.add(new LoggingOutInterceptor());
         sf.setOutInterceptors(outInts);
-        List<Interceptor<? extends Message>> outFaultInts = new ArrayList<Interceptor<? extends Message>>();
+        List<Interceptor<? extends Message>> outFaultInts = new ArrayList<>();
         outFaultInts.add(new CustomOutFaultInterceptor());
         sf.setOutFaultInterceptors(outFaultInts);
         sf.setResourceProvider(BookStore.class,
@@ -150,7 +151,7 @@ public class BookServer extends AbstractBusTestServerBase {
         BusFactory.setDefaultBus(null);
         BusFactory.setThreadDefaultBus(null);
     }
-    
+
     public void tearDown() throws Exception {
         server.stop();
         server.destroy();
@@ -168,14 +169,14 @@ public class BookServer extends AbstractBusTestServerBase {
             System.out.println("done!");
         }
     }
-    
+
     private static class BusMapperExceptionMapper implements ExceptionMapper<BusMapperException> {
 
         public Response toResponse(BusMapperException exception) {
             return Response.serverError().type("text/plain;charset=utf-8").header("BusMapper", "the-mapper")
                 .entity("BusMapperException").build();
         }
-        
+
     }
     @PreMatching
     private static class BlockingRequestFilter implements ContainerRequestFilter {
@@ -187,7 +188,7 @@ public class BookServer extends AbstractBusTestServerBase {
                 requestContext.abortWith(Response.ok().build());
             }
         }
-        
+
     }
     private static class FaultyResponseFilter implements ContainerResponseFilter {
         @Override
@@ -197,7 +198,7 @@ public class BookServer extends AbstractBusTestServerBase {
                 throw new BlockedException();
             }
         }
-        
+
     }
     private static class BlockedExceptionMapper implements ExceptionMapper<BlockedException> {
 
@@ -205,21 +206,21 @@ public class BookServer extends AbstractBusTestServerBase {
         public Response toResponse(BlockedException exception) {
             return Response.ok().build();
         }
-        
-        
+
+
     }
     @SuppressWarnings("serial")
     public static class BlockedException extends RuntimeException {
-        
+
     }
-    
+
     public static class ReplaceContentTypeInterceptor extends AbstractPhaseInterceptor<Message> {
         public ReplaceContentTypeInterceptor() {
             super(Phase.READ);
         }
 
         public void handleMessage(Message message) throws Fault {
-            Map<String, List<String>> headers = 
+            Map<String, List<String>> headers =
                 CastUtils.cast((Map<?, ?>)message.get(Message.PROTOCOL_HEADERS));
             headers.put(Message.CONTENT_TYPE, Collections.singletonList("text/plain"));
         }
@@ -234,41 +235,37 @@ public class BookServer extends AbstractBusTestServerBase {
             message.getExchange().put(Message.RESPONSE_CODE, 200);
         }
     }
-    
+
     public static class NotReturnedExceptionMapper implements ResponseExceptionMapper<BookNotReturnedException> {
 
         public BookNotReturnedException fromResponse(Response r) {
             String status = r.getHeaderString("Status");
-            if ("notReturned".equals(status)) { 
+            if ("notReturned".equals(status)) {
                 return new BookNotReturnedException(status);
-            } else {
-                return null;
             }
+            return null;
         }
-        
+
     }
-    
+
     public static class NotFoundExceptionMapper implements ResponseExceptionMapper<BookNotFoundFault> {
 
         public BookNotFoundFault fromResponse(Response r) {
             String status = r.getHeaderString("Status");
-            if ("notFound".equals(status)) { 
+            if ("notFound".equals(status)) {
                 return new BookNotFoundFault(status);
-            } else {
-                return null;
             }
+            return null;
         }
-        
+
     }
     public static class TestResponseFilter implements ClientResponseFilter {
 
         @Override
         public void filter(ClientRequestContext requestContext, ClientResponseContext responseContext)
             throws IOException {
-            // TODO Auto-generated method stub
-            
         }
-        
+
     }
     public static class ParamConverterImpl implements ParamConverterProvider {
 
@@ -279,14 +276,14 @@ public class BookServer extends AbstractBusTestServerBase {
         public <T> ParamConverter<T> getConverter(Class<T> rawType, Type genericType,
                                                   Annotation[] annotations) {
             if (rawType == Book.class) {
-                
-                MessageBodyReader<Book> mbr = providers.getMessageBodyReader(Book.class, 
-                                                                             Book.class, 
-                                                                             annotations, 
+
+                MessageBodyReader<Book> mbr = providers.getMessageBodyReader(Book.class,
+                                                                             Book.class,
+                                                                             annotations,
                                                                              MediaType.APPLICATION_XML_TYPE);
-                MessageBodyWriter<Book> mbw = providers.getMessageBodyWriter(Book.class, 
-                                                                             Book.class, 
-                                                                             annotations, 
+                MessageBodyWriter<Book> mbw = providers.getMessageBodyWriter(Book.class,
+                                                                             Book.class,
+                                                                             annotations,
                                                                              MediaType.APPLICATION_XML_TYPE);
                 return (ParamConverter<T>)new XmlParamConverter(mbr, mbw);
             } else if (rawType == byte.class) {
@@ -294,12 +291,12 @@ public class BookServer extends AbstractBusTestServerBase {
             } else {
                 return null;
             }
-            
+
         }
         private static class ByteConverter implements ParamConverter<Byte> {
             @Override
             public Byte fromString(String t) {
-                return new Byte(t); 
+                return Byte.valueOf(t);
             }
 
             @Override
@@ -310,17 +307,17 @@ public class BookServer extends AbstractBusTestServerBase {
         private static class XmlParamConverter implements ParamConverter<Book> {
             private MessageBodyReader<Book> mbr;
             private MessageBodyWriter<Book> mbw;
-            XmlParamConverter(MessageBodyReader<Book> mbr, MessageBodyWriter<Book> mbw) {  
+            XmlParamConverter(MessageBodyReader<Book> mbr, MessageBodyWriter<Book> mbw) {
                 this.mbr = mbr;
                 this.mbw = mbw;
             }
             @Override
             public Book fromString(String value) {
                 try {
-                    return mbr.readFrom(Book.class, Book.class, 
-                                        new Annotation[]{}, 
-                                        MediaType.APPLICATION_XML_TYPE, 
-                                        new MetadataMap<String, String>(), 
+                    return mbr.readFrom(Book.class, Book.class,
+                                        new Annotation[]{},
+                                        MediaType.APPLICATION_XML_TYPE,
+                                        new MetadataMap<String, String>(),
                                         new ByteArrayInputStream(value.getBytes()));
                 } catch (IOException ex) {
                     throw new BadRequestException(ex);
@@ -330,9 +327,9 @@ public class BookServer extends AbstractBusTestServerBase {
             public String toString(Book value) {
                 ByteArrayOutputStream bos = new ByteArrayOutputStream();
                 try {
-                    mbw.writeTo(value, Book.class, Book.class, 
-                                new Annotation[]{}, 
-                                MediaType.APPLICATION_XML_TYPE, 
+                    mbw.writeTo(value, Book.class, Book.class,
+                                new Annotation[]{},
+                                MediaType.APPLICATION_XML_TYPE,
                                 new MetadataMap<String, Object>(),
                                 bos);
                 } catch (IOException ex) {
