@@ -50,6 +50,7 @@ import javax.ws.rs.Encoded;
 import javax.ws.rs.GET;
 import javax.ws.rs.HEAD;
 import javax.ws.rs.HeaderParam;
+import javax.ws.rs.InternalServerErrorException;
 import javax.ws.rs.MatrixParam;
 import javax.ws.rs.OPTIONS;
 import javax.ws.rs.POST;
@@ -111,36 +112,37 @@ import org.junit.Assert;
 @Path("/bookstore")
 @GZIP(threshold = 1)
 public class BookStore {
-    private Map<Long, Book> books = new HashMap<Long, Book>();
-    private Map<Long, CD> cds = new HashMap<Long, CD>();
+
+    private Map<Long, Book> books = new HashMap<>();
+    private Map<Long, CD> cds = new HashMap<>();
     private long bookId = 123;
     private long cdId = 123;
-    
+
     private String defaultName;
     private long defaultId;
-    
+
     private String currentBookId;
     @PathParam("CDId")
     private String currentCdId;
     @Context
     private HttpHeaders httpHeaders;
-    @Context 
+    @Context
     private SecurityContext securityContext;
-    @Context 
+    @Context
     private UriInfo ui;
     private UriInfo uiFromConstructor;
-    @Context 
+    @Context
     private ResourceContext resourceContext;
-    @Context 
+    @Context
     private MessageContext messageContext;
-    @Context 
+    @Context
     private Configuration configuration;
-    
+
     @BeanParam
     private BookBean theBookBean;
-    
+
     private Book2 book2Sub = new Book2();
-    
+
     public BookStore() {
         init();
     }
@@ -148,12 +150,12 @@ public class BookStore {
         this.uiFromConstructor = ui;
         init();
     }
-    
+
     @PostConstruct
     public void postConstruct() {
         //System.out.println("PostConstruct called");
     }
-    
+
     @PreDestroy
     public void preDestroy() {
         //System.out.println("PreDestroy called");
@@ -163,6 +165,26 @@ public class BookStore {
     @Produces("application/json")
     public BookType getBookType() {
         return new BookType("root", 124L);
+    }
+    @GET
+    @Path("/listoflonganddouble")
+    @Produces("text/xml")
+    public Book getBookFromListOfLongAndDouble(@QueryParam("value") List<Long> lValue,
+                                               @QueryParam("value") List<Double> dValue) {
+        StringBuilder lBuilder = new StringBuilder();
+        for (Long v : lValue) {
+            lBuilder.append(v.longValue());
+        }
+        StringBuilder dBuilder = new StringBuilder();
+        for (Double v : dValue) {
+            dBuilder.append(v.longValue());
+        }
+        String lStr = lBuilder.toString();
+        String dStr = dBuilder.toString();
+        if (!lStr.equals(dStr)) {
+            throw new InternalServerErrorException();
+        }
+        return new Book("cxf", Long.parseLong(lStr));
     }
     @GET
     @Path("/")
@@ -185,81 +207,78 @@ public class BookStore {
     public String getBookTextWildcard() {
         return "book";
     }
-    
+
     @GET
     @Path("/bookarray")
     public String[] getBookStringArray() {
         return new String[]{"Good book"};
     }
-    
+
     @GET
     @Path("/bookindexintarray")
     @Produces("text/plain")
     public int[] getBookIndexAsIntArray() {
         return new int[]{1, 2, 3};
     }
-    
+
     @GET
     @Path("/bookindexdoublearray")
     @Produces("text/plain")
     public double[] getBookIndexAsDoubleArray() {
         return new double[]{1, 2, 3};
     }
-    
+
     @GET
     @Path("/uifromconstructor")
     @Produces("text/plain")
     public String getPathFromUriInfo() {
-        return uiFromConstructor.getAbsolutePath().toString() + "?prop=" 
+        return uiFromConstructor.getAbsolutePath().toString() + "?prop="
             + configuration.getProperty("book").toString();
     }
-        
+
     @GET
     @Path("/redirect")
     public Response getBookRedirect(@QueryParam("redirect") Boolean done,
                                     @QueryParam("sameuri") Boolean sameuri,
                                     @CookieParam("a") String cookie) {
         if (done == null) {
-            String uri = sameuri.equals(Boolean.TRUE) 
+            String uri = sameuri.equals(Boolean.TRUE)
                 ? ui.getAbsolutePathBuilder().queryParam("redirect", "true").build().toString()
                 : "http://otherhost/redirect";
             return Response.status(303).cookie(NewCookie.valueOf("a=b")).header("Location", uri).build();
-        } else {
-            return Response.ok(new Book("CXF", 123L), "application/xml")
-                .header("RequestURI", this.ui.getRequestUri().toString())
-                .header("TheCookie", cookie)
-                .build();
         }
+        return Response.ok(new Book("CXF", 123L), "application/xml")
+            .header("RequestURI", this.ui.getRequestUri().toString())
+            .header("TheCookie", cookie)
+            .build();
     }
-    
+
     @GET
     @Path("/redirect/relative")
     public Response getBookRedirectRel(@QueryParam("redirect") Boolean done,
                                        @QueryParam("loop") boolean loop) {
         if (done == null) {
             if (loop) {
-                return Response.status(303).header("Location", "relative?loop=true").build();                
-            } else {
-                return Response.status(303).header("Location", "relative?redirect=true").build();    
+                return Response.status(303).header("Location", "relative?loop=true").build();
             }
-        } else {
-            return Response.ok(new Book("CXF", 124L), "application/xml").build();
+            return Response.status(303).header("Location", "relative?redirect=true").build();
         }
+        return Response.ok(new Book("CXF", 124L), "application/xml").build();
     }
-    
+
     @GET
     @Path("/booklist")
     public List<String> getBookListArray() {
         return Collections.singletonList("Good book");
     }
-    
+
     @GET
     @Path("/customtext")
     @Produces("text/custom")
     public String getCustomBookTest() {
         return "Good book";
     }
-    
+
     @GET
     @Path("/dropjsonroot")
     @Produces("application/json")
@@ -267,7 +286,7 @@ public class BookStore {
         mc.put("drop.json.root.element", "true");
         return doGetBook("123");
     }
-    
+
     @GET
     @Path("/httpresponse")
     public void getBookDesciptionHttpResponse(@Context HttpServletResponse response) {
@@ -278,7 +297,7 @@ public class BookStore {
             throw new WebApplicationException(ex);
         }
     }
-    
+
     @RETRIEVE
     @Path("/retrieve")
     @Produces("application/xml")
@@ -286,15 +305,22 @@ public class BookStore {
     public Book retrieveBook(Book book) {
         return book;
     }
-    
+
     @PATCH
     @Path("/patch")
     @Produces("application/xml")
     @Consumes("application/xml")
     public Response patchBook(Book book) {
+        if ("Timeout".equals(book.getName())) {
+            try {
+                Thread.sleep(2000);
+            } catch (InterruptedException e) {
+            }
+            return Response.ok(book).build();
+        }
         return Response.ok(book).build();
     }
-    
+
     @DELETE
     @Path("/deletebody")
     @Produces("application/xml")
@@ -302,17 +328,24 @@ public class BookStore {
     public Book deleteBodyBook(Book book) {
         return book;
     }
-    
+
     @POST
     @Path("/echoxmlbookquery")
     @Produces("application/xml")
     public Book echoXmlBookQuery(@QueryParam("book") Book book, @QueryParam("id") byte id) {
-        if (book.getId() != (long)id) {
+        if (book.getId() != id) {
             throw new RuntimeException();
         }
         return book;
     }
-    
+
+    @POST
+    @Path("/echoxmlbook")
+    @Produces("application/xml")
+    public Book echoXmlBook(Book book) {
+        return book;
+    }
+
     @POST
     @Path("/emptyform")
     @Produces("text/plain")
@@ -323,7 +356,15 @@ public class BookStore {
         }
         return "empty form";
     }
-    
+
+    @POST
+    @Path("/form")
+    @Produces(MediaType.APPLICATION_FORM_URLENCODED)
+    @Consumes(MediaType.APPLICATION_FORM_URLENCODED)
+    public Form echoForm(Form form) {
+        return form;
+    }
+
     @GET
     @Path("/booknames/123")
     @Produces("application/bar")
@@ -331,52 +372,57 @@ public class BookStore {
         Long l = Long.parseLong("123");
         return books.get(l).getName().getBytes();
     }
-    
+
     @GET
     @Path("/beanparam/{id}")
     @Produces("application/xml")
     public Book getBeanParamBook(@BeanParam BookBean bean) {
-        
-        long id = bean.getId() + bean.getId2() + bean.getId3(); 
+
+        long id = bean.getId() + bean.getId2() + bean.getId3();
         if (bean.getNested().getId4() != id) {
             throw new RuntimeException();
         }
         return books.get(id);
     }
-    
+
+    @Path("/beanparamsub")
+    public BookStoreSub getBeanParamBookSub() {
+        return new BookStoreSub(this);
+    }
+
     @GET
     @Path("/twoBeanParams/{id}")
     @Produces("application/xml")
-    public Book getTwoBeanParamsBook(@BeanParam BookBean2 bean1, 
+    public Book getTwoBeanParamsBook(@BeanParam BookBean2 bean1,
                                      @BeanParam BookBeanNested bean2) {
-        
-        long id = bean1.getId() + bean1.getId2() + bean1.getId3(); 
+
+        long id = bean1.getId() + bean1.getId2() + bean1.getId3();
         if (bean2.getId4() != id) {
             throw new RuntimeException();
         }
         return books.get(id);
     }
-    
+
     @POST
     @Path("/mapperonbus")
     public void mapperOnBus() {
         throw new BusMapperException();
     }
-    
+
     @GET
     @Path("/beanparam2/{id}")
     @Produces("application/xml")
     public Book getBeanParamBook2() {
         return getBeanParamBook(theBookBean);
     }
-    
+
     @GET
     @Path("emptybook")
     @Produces({"application/xml", "application/json" })
     public Book getEmptyBook() {
         return null;
     }
-    
+
     @GET
     @Path("emptybook/nillable")
     @Produces({"application/xml", "application/json" })
@@ -384,26 +430,26 @@ public class BookStore {
     public Book getEmptyBookNullable() {
         return null;
     }
-    
+
     @GET
     @Path("allCharsButA-B/:@!$&'()*+,;=-._~")
     public Book getWithComplexPath() {
         return new Book("Encoded Path", 125L);
     }
-    
+
     @GET
     @Path("object")
     public Object getBookAsObject() {
         return new Book("Book as Object", 125L);
     }
-    
+
     @GET
     @Path("/default")
     @Produces("application/xml")
     public Book getDefaultBook() {
         return new Book(defaultName, defaultId);
     }
-    
+
     @GET
     @Path("/books/colon/{a}:{b}:{c}")
     @Produces("application/xml")
@@ -412,7 +458,7 @@ public class BookStore {
                                       @PathParam("c") String id3) throws BookNotFoundFault {
         return doGetBook(id1 + id2 + id3);
     }
-    
+
     @POST
     @Path("emptypost")
     public void emptypost() {
@@ -422,39 +468,39 @@ public class BookStore {
             throw new WebApplicationException(400);
         }
     }
-    
+
     @PUT
     @Path("emptyput")
     @Consumes("application/json")
     public void emptyput() {
-        if (!httpHeaders.getMediaType().toString().equals("application/json")) {
+        if (!"application/json".equals(httpHeaders.getMediaType().toString())) {
             throw new RuntimeException();
         }
     }
-    
+
     @POST
     public void emptypostNoPath() {
         emptypost();
     }
-    
+
     @GET
     @Path("webappexception")
     public Book throwException() {
-        
+
         Response response = Response.serverError().entity("This is a WebApplicationException").build();
         throw new WebApplicationException(response);
     }
-    
+
     @GET
     @Path("webappexceptionXML")
     public Book throwExceptionXML() {
-        
+
         Response response = Response.status(406).type("application/xml")
                             .entity("<Book><name>Exception</name><id>999</id></Book>")
                             .build();
         throw new WebApplicationException(response);
     }
-    
+
     @GET
     @Path("tempredirect")
     public Response tempRedirectAndSetCookies() {
@@ -464,56 +510,55 @@ public class BookStore {
                        .header("Set-Cookie", "a=b").header("Set-Cookie", "c=d")
                        .build();
     }
-    
+
     @GET
     @Path("setcookies")
     public Response setComplexCookies() {
-        return Response.ok().header("Set-Cookie", 
+        return Response.ok().header("Set-Cookie",
                                     "bar.com.anoncart=107894933471602436; Domain=.bar.com;"
                                     + " Expires=Thu, 01-Oct-2020 23:44:22 GMT; Path=/")
                                     .build();
     }
-    
+
 
     @GET
     @Path("setmanycookies")
     public Response setTwoCookies() {
         return Response.ok().header("Set-Cookie", "JSESSIONID=0475F7F30A26E5B0C15D69; Path=/")
-            .header("Set-Cookie", "COOKIETWO=dummy; Expires=Sat, 20-Nov-2010 19:11:32 GMT; Path=/")
-            .header("Set-Cookie", "COOKIETWO=dummy2; expires=Sat, 20-Nov-2010 19:11:32 GMT; Path=/")
+            .header("Set-cookie", "COOKIETWO=dummy; Expires=Sat, 20-Nov-2010 19:11:32 GMT; Path=/")
+            .header("set-cookie", "COOKIETWO=dummy2; expires=Sat, 20-Nov-2010 19:11:32 GMT; Path=/")
             .build();
     }
-    
+
     @GET
     @Path("propagate-exception")
     public Book propogateException() throws BookNotFoundFault {
         throw new BookNotFoundFault("Book Exception");
     }
-    
+
     @GET
     @Path("multipleexceptions")
-    public Response getBookWithExceptions(@QueryParam("exception") boolean notReturned) 
+    public Response getBookWithExceptions(@QueryParam("exception") boolean notReturned)
         throws BookNotFoundFault, BookNotReturnedException {
         if (notReturned) {
             throw new WebApplicationException(Response.status(404).header("Status", "notReturned").build());
-        } else {
-            throw new WebApplicationException(Response.status(404).header("Status", "notFound").build());
         }
+        throw new WebApplicationException(Response.status(404).header("Status", "notFound").build());
     }
-    
+
     @GET
     @Path("multipleexceptions2")
-    public Response getBookWithExceptions2(@QueryParam("exception") boolean notReturned) 
+    public Response getBookWithExceptions2(@QueryParam("exception") boolean notReturned)
         throws BookNotReturnedException, BookNotFoundFault {
         return getBookWithExceptions(notReturned);
     }
-    
+
     @GET
     @Path("propogateExceptionVar/{i}")
     public Book propogateExceptionWithVar() throws BookNotFoundFault {
         return null;
     }
-    
+
     @GET
     @Path("name-in-query")
     @Produces("application/xml")
@@ -522,14 +567,14 @@ public class BookStore {
     public Book getBookFromQuery(@QueryParam("name") String name) {
         return new Book(name, 321L);
     }
-    
+
     @GET
     @Path("propagate-exception2")
     public Book propogateException2() throws BookNotFoundFault {
         PhaseInterceptorChain.getCurrentMessage().put("org.apache.cxf.propagate.exception", Boolean.FALSE);
         throw new BookNotFoundFault("Book Exception");
     }
-    
+
     @GET
     @Path("propagate-exception3")
     public Book propogateException3() throws BookNotFoundFault {
@@ -537,14 +582,14 @@ public class BookStore {
             .put("org.apache.cxf.systest.for-out-fault-interceptor", Boolean.TRUE);
         throw new BookNotFoundFault("Book Exception");
     }
-    
+
     @GET
     @Path("books/check/{id}")
-    @Produces("text/plain")
+    @Produces("text/plain,text/boolean")
     public boolean checkBook(@PathParam("id") Long id) {
         return books.containsKey(id);
     }
-    
+
     @GET
     @Path("books/check/malformedmt/{id}")
     @Produces("text/plain")
@@ -553,7 +598,7 @@ public class BookStore {
         mc.put("org.apache.cxf.jaxrs.mediaTypeCheck.strict", false);
         return Response.ok(books.containsKey(id)).type("text").build();
     }
-    
+
     @POST
     @Path("books/check2")
     @Produces("text/plain")
@@ -561,33 +606,33 @@ public class BookStore {
     public Boolean checkBook2(Long id) {
         return books.containsKey(id);
     }
-    
-    
+
+
     @GET
     @Path("timetable")
     public Calendar getTimetable() {
         return new GregorianCalendar();
     }
-    
+
     @GET
     @Path("wrongparametertype")
     public void wrongParameterType(@QueryParam("p") Map<?, ?> p) {
         throw new IllegalStateException("This op is not expected to be invoked");
     }
-    
+
     @GET
     @Path("exceptionduringconstruction")
     public void wrongParameterType(@QueryParam("p") BadBook p) {
         throw new IllegalStateException("This op is not expected to be invoked");
     }
-    
+
     @POST
     @Path("/unsupportedcontenttype")
     @Consumes("application/xml")
     public String unsupportedContentType() {
         throw new IllegalStateException("This op is not expected to be invoked");
     }
-    
+
     @GET
     @Path("/bookurl/{URL}/")
     public Book getBookByURL(@PathParam("URL") String urlValue) throws Exception {
@@ -595,7 +640,7 @@ public class BookStore {
         int index = url2.lastIndexOf('/');
         return doGetBook(url2.substring(index + 1));
     }
-    
+
     @OPTIONS
     @Path("/options")
     public Response getOptions() throws Exception {
@@ -605,7 +650,7 @@ public class BookStore {
                             .header("Allow", "DELETE")
                             .build();
     }
-    
+
     @GET
     @Path("/options/2")
     public Response getOptions2() throws Exception {
@@ -615,31 +660,31 @@ public class BookStore {
     public int getOptions2Sub(@PathParam("id") int id) {
         throw new RuntimeException();
     }
-    
+
     @POST
     @Path("post401")
     public Response get401WithText() throws Exception {
         return Response.status(401).entity("This is 401").build();
     }
-    
+
     @GET
     @Path("infault")
     public Response infault() {
         throw new RuntimeException();
     }
-    
+
     @GET
     @Path("infault2")
     public Response infault2() {
         throw new RuntimeException();
     }
-    
+
     @GET
     @Path("outfault")
     public Response outfault() {
         return Response.ok().build();
     }
-    
+
     @POST
     @Path("/collections")
     @Produces({"application/xml", "application/json" })
@@ -650,19 +695,19 @@ public class BookStore {
         }
         return bs;
     }
-    
+
     @POST
     @Path("/collectionBook")
     @Produces({"application/xml", "application/json" })
     @Consumes({"application/xml", "application/json" })
     public List<Book> postBookGetCollection(@Nullable Book book) throws Exception {
-        List<Book> list = new ArrayList<Book>();
+        List<Book> list = new ArrayList<>();
         if (book != null) {
             list.add(book);
         }
         return list;
     }
-    
+
     @POST
     @Path("/collections3")
     @Produces({"application/xml", "application/json" })
@@ -673,7 +718,7 @@ public class BookStore {
         }
         return bs.get(0);
     }
-    
+
     @POST
     @Path("/jaxbelementcollections")
     @Produces({"application/xml", "application/json" })
@@ -708,14 +753,14 @@ public class BookStore {
         Assert.assertEquals("CXF Rocks", b22.getName());
         return bs;
     }
-    
+
     @GET
     @Path("/collections")
     @Produces({"application/xml", "application/json" })
     public List<Book> getBookCollection() throws Exception {
-        return new ArrayList<Book>(books.values());
+        return new ArrayList<>(books.values());
     }
-    
+
     @POST
     @Path("/array")
     @Produces("application/xml")
@@ -726,7 +771,7 @@ public class BookStore {
         }
         return bs;
     }
-    
+
     @GET
     @Path("/segment/{pathsegment}/")
     public Book getBookBySegment(@PathParam("pathsegment") PathSegment segment) throws Exception {
@@ -738,32 +783,32 @@ public class BookStore {
         String s2 = map.getFirst("second").toString();
         return doGetBook(s1 + s2);
     }
-    
+
     @GET
     @Path("/segment/list/{pathsegment:.+}/")
-    public Book getBookBySegment(@PathParam("pathsegment") List<PathSegment> list) 
+    public Book getBookBySegment(@PathParam("pathsegment") List<PathSegment> list)
         throws Exception {
         return doGetBook(list.get(0).getPath()
                          + list.get(1).getPath()
                          + list.get(2).getPath());
     }
-    
+
     @GET
     @Path("/segment/matrix")
     public Book getBookByMatrixParams(@MatrixParam("first") String s1,
                                       @MatrixParam("second") String s2) throws Exception {
-        
+
         return doGetBook(s1 + s2);
     }
-    
+
     @GET
     @Path("/segment/matrix-middle")
     public Book getBookByMatrixParamsMiddle(@MatrixParam("first") String s1,
                                       @MatrixParam("second") String s2) throws Exception {
-        
+
         return doGetBook(s1 + s2);
     }
-    
+
     @GET
     @Path("/segment/matrix-list")
     public Book getBookByMatrixListParams(@MatrixParam("first") List<String> list) throws Exception {
@@ -772,18 +817,18 @@ public class BookStore {
         }
         return doGetBook(list.get(0) + list.get(1));
     }
-    
+
     @GET
     @Path("/bookheaders/simple/")
     @CustomHeaderAdded
     @PostMatchMode
     public Response getBookByHeaderSimple(@HeaderParam("BOOK") String headerBook,
         @HeaderParam("Simple") String headerSimple) throws Exception {
-        
+
         ResponseBuilder builder = getBookByHeaderSimpleBuilder(headerBook, headerSimple);
         return builder.build();
     }
-    
+
     @POST
     @Path("/bookheaders/simple/")
     @CustomHeaderAdded
@@ -811,14 +856,14 @@ public class BookStore {
         }
         return builder.build();
     }
-    
+
     @POST
     @Path("/bookheaders/simple/")
     @CustomHeaderAdded
     @PostMatchMode
     @Consumes("application/v1+xml")
     public Response echoBookByHeaderSimple2(Book book,
-        @HeaderParam("Content-type") String ct,                                    
+        @HeaderParam("Content-type") String ct,
         @HeaderParam("BOOK") String headerBook,
         @HeaderParam("Simple") String headerSimple,
         @HeaderParam("ServerReaderInterceptor") String serverInterceptorHeader,
@@ -836,45 +881,49 @@ public class BookStore {
         builder.header("newmediatypeused", ct);
         return builder.build();
     }
-    
+
     @POST
     @Path("/bookheaders/simple/async")
     @PostMatchMode
     @CustomHeaderAdded
     @CustomHeaderAddedAsync
     public Response echoBookByHeaderSimpleAsync(Book book,
-                                       @HeaderParam("Content-type") String ct,         
+                                       @HeaderParam("Content-type") String ct,
                                        @HeaderParam("BOOK") String headerBook,
                                        @HeaderParam("Simple") String headerSimple,
                                        @HeaderParam("ServerReaderInterceptor") String serverInterceptorHeader,
-                                       @HeaderParam("ClientWriterInterceptor") String clientInterceptorHeader) 
+                                       @HeaderParam("ClientWriterInterceptor") String clientInterceptorHeader)
         throws Exception {
-        
-        return echoBookByHeaderSimple(book, ct, headerBook, headerSimple, serverInterceptorHeader, 
+
+        return echoBookByHeaderSimple(book, ct, headerBook, headerSimple, serverInterceptorHeader,
                                       clientInterceptorHeader, null);
     }
-    
+
     private ResponseBuilder getBookByHeaderSimpleBuilder(@HeaderParam("BOOK") String headerBook,
         @HeaderParam("Simple") String headerSimple) throws Exception {
-        
+
         ResponseBuilder builder = Response.ok(doGetBook(headerBook));
         if (headerSimple != null) {
             builder.header("Simple", headerSimple);
         }
+        String aHeaderValue = httpHeaders.getHeaderString("a");
+        if (aHeaderValue != null) {
+            builder.header("a", aHeaderValue);
+        }
         return builder;
     }
-    
+
     @GET
     @Path("/bookheaders/")
     public Book getBookByHeader(@HeaderParam("BOOK") List<String> ids) throws Exception {
         List<MediaType> types = httpHeaders.getAcceptableMediaTypes();
-        if (types.size() != 2 
+        if (types.size() != 2
             || !"text/xml".equals(types.get(0).toString())
             || !MediaType.APPLICATION_XML_TYPE.isCompatible(types.get(1))) {
             throw new WebApplicationException();
         }
         List<Locale> locales = httpHeaders.getAcceptableLanguages();
-        if (locales.size() != 2 
+        if (locales.size() != 2
             || !"en".equals(locales.get(0).getLanguage())
             || !"da".equals(locales.get(1).getLanguage())) {
             throw new WebApplicationException();
@@ -895,27 +944,27 @@ public class BookStore {
         }
         return doGetBook(ids.get(0) + ids.get(1) + ids.get(2));
     }
-    
+
     @GET
     @Path("/bookheaders2/")
-    public Book getBookByHeader(@DefaultValue("123") @HeaderParam("BOOK2") String id) 
+    public Book getBookByHeader(@DefaultValue("123") @HeaderParam("BOOK2") String id)
         throws Exception {
         return doGetBook(id);
     }
-    
+
     @GET
     @Path("/getheadbook/")
     public Book getBookGetHead() throws Exception {
         return doGetBook("123");
     }
-    
+
     @HEAD
     @Path("/getheadbook/")
     public Response getBookGetHead2() throws Exception {
         return Response.ok().header("HEAD_HEADER", "HEAD_HEADER_VALUE").build();
     }
-    
-    
+
+
     @GET
     @Path("/bookquery")
     public Book getBookByURLQuery(@QueryParam("urlid") String urlValue) throws Exception {
@@ -923,12 +972,12 @@ public class BookStore {
         int index = url2.lastIndexOf('/');
         return doGetBook(url2.substring(index + 1));
     }
-    
+
     @GET
     @Path("/bookidarray")
     public Book getBookByURLQuery(@QueryParam("id") String[] ids) throws Exception {
         if (ids == null || ids.length != 3) {
-            throw new WebApplicationException(); 
+            throw new WebApplicationException();
         }
         return doGetBook(ids[0] + ids[1] + ids[2]);
     }
@@ -942,47 +991,47 @@ public class BookStore {
         }
         return doGetBook(id);
     }
-    
+
     @GET
     @Path("/genericbooks/{bookId}/")
     @Produces("application/xml")
-    public GenericEntity<GenericHandler<Book>> getGenericBook(@PathParam("bookId") String id) 
+    public GenericEntity<GenericHandler<Book>> getGenericBook(@PathParam("bookId") String id)
         throws BookNotFoundFault {
         return new GenericEntity<GenericHandler<Book>>(new GenericHandler<Book>(doGetBook(id))) { };
     }
-    
+
     @GET
     @Path("/genericbooks2/{bookId}/")
     @Produces("application/xml")
-    public Response getGenericBook2(@PathParam("bookId") String id) 
+    public Response getGenericBook2(@PathParam("bookId") String id)
         throws BookNotFoundFault {
         return Response.ok().entity(getGenericBook(id), getExtraAnnotations()).build();
     }
-    
+
     @GET
     @Path("/genericresponse/{bookId}/")
     @Produces("application/xml")
-    public Response getGenericResponseBook(@PathParam("bookId") String id) 
+    public Response getGenericResponseBook(@PathParam("bookId") String id)
         throws BookNotFoundFault {
         return Response.ok(getGenericBook(id)).build();
     }
-    
+
     @GET
     @Path("/books/{bookId}/")
     @Produces("application/xml")
     public Book getBook(@PathParam("bookId") String id) throws BookNotFoundFault {
         return doGetBook(id);
     }
-    
+
     @GET
     @Path("/books/query/default")
     @Produces("application/xml")
     public Book getBook(@QueryParam("bookId") long id) throws BookNotFoundFault {
         return books.get(id + 123);
     }
-    
-    
-    
+
+
+
     @GET
     @Path("/books/response/{bookId}/")
     @Produces("application/xml")
@@ -991,21 +1040,21 @@ public class BookStore {
         EntityTag etag = new EntityTag(Integer.toString(entity.hashCode()));
         return Response.ok().tag(etag).entity(entity).build();
     }
-    
+
     @GET
     @Path("/books/{bookId}/cglib")
     @Produces("application/xml")
     public Book getBookCGLIB(@PathParam("bookId") String id) throws BookNotFoundFault {
         return createCglibProxy(doGetBook(id));
     }
-    
+
     @GET
     @Path("/the books/{bookId}/")
     @Produces("application/xml")
     public Book getBookWithSpace(@PathParam("bookId") String id) throws BookNotFoundFault {
         return doGetBook(id);
     }
-    
+
     @GET
     @Path("/thebooks/{bookId}/")
     @Produces("application/xml")
@@ -1023,13 +1072,13 @@ public class BookStore {
         }
         return b;
     }
-    
+
     @GET
     @Path("/books/search")
     @Produces("application/xml")
-    public Book getBook(@Context SearchContext searchContext) 
+    public Book getBook(@Context SearchContext searchContext)
         throws BookNotFoundFault {
-        
+
         SearchCondition<Book> sc = searchContext.getCondition(Book.class);
         if (sc == null) {
             throw new BookNotFoundFault("Search exception");
@@ -1040,61 +1089,61 @@ public class BookStore {
         }
         return found.get(0);
     }
-    
+
     @GET
     @Path("/books/querycontext/{expression}")
     @Produces("text/plain")
-    public String getBookQueryContext(@PathParam("expression") String expression, 
-                                      @Context QueryContext searchContext) 
+    public String getBookQueryContext(@PathParam("expression") String expression,
+                                      @Context QueryContext searchContext)
         throws BookNotFoundFault {
-        return searchContext.getConvertedExpression(expression);
+        return searchContext.getConvertedExpression(expression, Book.class);
     }
-    
+
     @GET
     @Path("/books/{search}/chapter/{chapter}")
     @Produces("application/xml")
     public Chapter getChapterFromSelectedBook(@Context SearchContext searchContext,
                                               @PathParam("search") String expression,
                                               @PathParam("chapter") int chapter) {
-        
+
         SearchCondition<Book> sc = searchContext.getCondition(expression, Book.class);
         if (sc == null) {
-            throw new WebApplicationException(404); 
+            throw new WebApplicationException(404);
         }
         List<Book> found = sc.findAll(books.values());
         if (found.size() != 1) {
             throw new WebApplicationException(404);
         }
         Book selectedBook = found.get(0);
-        
+
         return selectedBook.getChapter(chapter);
     }
-    
+
     @GET
     @Path("/books({search})/chapter")
     @Produces("application/xml")
     public Chapter getIntroChapterFromSelectedBook(@Context SearchContext searchContext,
                                                    @PathParam("search") String expression) {
-        
+
         return getChapterFromSelectedBook(searchContext, expression, 1);
     }
-    
+
     @GET
     @Path("/books[{search}]/chapter")
     @Produces("application/xml")
     public Chapter getIntroChapterFromSelectedBook2(@Context SearchContext searchContext,
                                                    @PathParam("search") String expression) {
-        
+
         return getChapterFromSelectedBook(searchContext, expression, 1);
     }
-    
+
     @GET
     @Path("/books/text/xml/{bookId}")
     @Produces("text/xml")
     public Book getBookTextXml(@PathParam("bookId") String id) throws BookNotFoundFault {
         return doGetBook(id);
     }
-    
+
     @GET
     @Path("/books/wrapper/{bookId}/")
     @Produces("application/xml")
@@ -1104,43 +1153,43 @@ public class BookStore {
         bw.setBook(b);
         return bw;
     }
-    
+
     @GET
     @Path("/books/wrapper2/{bookId}/")
     @Produces("application/xml")
     public Book getWrappedBook2(@PathParam("bookId") Long id) throws BookNotFoundFault {
         return new Book("CXF in Action", 99999L);
     }
-    
+
     @GET
     @Path("books/custom/{bookId:\\d\\d\\d}")
     public Book getBookCustom(@PathParam("bookId") String id) throws BookNotFoundFault {
         return doGetBook(id);
     }
-    
+
     @GET
     @Path("/books/query")
     public Book getBookQuery(@QueryParam("bookId") long id) throws BookNotFoundFault {
         return doGetBook(Long.toString(id));
     }
-    
+
     @GET
     @Path("/books/defaultquery")
-    public Book getDefaultBookQuery(@DefaultValue("123") @QueryParam("bookId") String id) 
+    public Book getDefaultBookQuery(@DefaultValue("123") @QueryParam("bookId") String id)
         throws BookNotFoundFault {
         return doGetBook(id);
     }
-    
+
     @GET
     @Path("/books/missingquery")
-    public Book getBookMissingQuery(@QueryParam("bookId") long id) 
+    public Book getBookMissingQuery(@QueryParam("bookId") long id)
         throws BookNotFoundFault {
         if (id != 0) {
             throw new RuntimeException();
         }
         return doGetBook("123");
     }
-    
+
     @GET
     @Path("/books/element")
     public JAXBElement<Book> getBookElement() throws Exception {
@@ -1148,11 +1197,10 @@ public class BookStore {
                                      Book.class,
                                      doGetBook("123"));
     }
-    
+
     @POST
     @Path("/books/element/echo")
     public JAXBElement<Book> echoBookElement(JAXBElement<Book> element) throws Exception {
-        Assert.assertTrue(element instanceof JAXBElement);
         return element;
     }
     @POST
@@ -1167,15 +1215,15 @@ public class BookStore {
     public Book echoBookElementJson(Book element) throws Exception {
         return element;
     }
-    
+
     @SuppressWarnings("unchecked")
     @POST
     @Path("/books/element/echo/wildcard")
-    public JAXBElement<? super Book> echoBookElementWildcard(JAXBElement<? extends Book> element) 
+    public JAXBElement<? super Book> echoBookElementWildcard(JAXBElement<? extends Book> element)
         throws Exception {
         return (JAXBElement<? super Book>)element;
     }
-    
+
     @GET
     @Path("/books/adapter")
     @XmlJavaTypeAdapter(BookInfoAdapter.class)
@@ -1187,77 +1235,77 @@ public class BookStore {
     @XmlJavaTypeAdapter(BookInfoAdapter.class)
     @Consumes("application/xml")
     @Produces({"application/xml", "application/json" })
-    public List<BookInfo> getBookAdapterList(@XmlJavaTypeAdapter(BookInfoAdapter.class) 
-                                              List<BookInfo> collection) 
+    public List<BookInfo> getBookAdapterList(@XmlJavaTypeAdapter(BookInfoAdapter.class)
+                                              List<BookInfo> collection)
         throws Exception {
         if (collection.size() != 1) {
             throw new WebApplicationException(400);
         }
         return collection;
     }
-    
+
     @GET
     @Path("/books/interface/adapter")
     public BookInfoInterface getBookAdapterInterface() throws Exception {
         return new BookInfo2(doGetBook("123"));
     }
-    
+
     @GET
     @Path("/books/interface/adapter-list")
     public List<? extends BookInfoInterface> getBookAdapterInterfaceList() throws Exception {
-        List<BookInfoInterface> list = new ArrayList<BookInfoInterface>();
+        List<BookInfoInterface> list = new ArrayList<>();
         list.add(new BookInfo2(doGetBook("123")));
         return list;
     }
-    
+
     @GET
     @Path("/books/adapter-list")
     @XmlJavaTypeAdapter(BookInfoAdapter.class)
     public List<? extends BookInfo> getBookAdapterList() throws Exception {
-        List<BookInfo> list = new ArrayList<BookInfo>();
+        List<BookInfo> list = new ArrayList<>();
         list.add(new BookInfo(doGetBook("123")));
         return list;
     }
-    
+
     @PathParam("bookId")
     public void setBookId(String id) {
         currentBookId = id;
     }
-    
+
     public void setDefaultNameAndId(String name, long id) {
         defaultName = name;
         defaultId = id;
     }
-    
+
     @GET
     @Path("/books/{bookId}/")
     @Produces("application/json;qs=0.9")
     public Book getBookAsJSON() throws BookNotFoundFault {
         return doGetBook(currentBookId);
     }
-    
-    
+
+
     @GET
     @Path("/books/buffer")
     @Produces("application/bar")
     public InputStream getBufferedBook() {
         return getClass().getResourceAsStream("resources/expected_get_book123.txt");
     }
-    
+
     @GET
     @Path("/books/fail-early")
     @Produces("application/bar")
     public StreamingOutput failEarlyInWrite() {
         return new StreamingOutputImpl(true);
     }
-    
+
     @GET
     @Path("/books/statusFromStream")
     @Produces("text/xml")
     public Response statusFromStream() {
         return Response.ok(new ResponseStreamingOutputImpl()).type("text/plain").build();
     }
-    
+
     @SuppressWarnings("rawtypes")
     @GET
     @Path("/books/streamingresponse")
@@ -1270,69 +1318,71 @@ public class BookStore {
             public void writeTo(Writer writer) throws IOException {
                 writer.write(new Book("stream", 124L));
             }
-            
+
         }).build();
     }
-    
+
     @GET
     @Path("/books/fail-late")
     @Produces("application/bar")
     public StreamingOutput writeToStreamAndFail() {
         return new StreamingOutputImpl(false);
     }
-    
+
     private Book doGetBook(String id) throws BookNotFoundFault {
         Book book = books.get(Long.parseLong(id));
         if (book != null) {
             return book;
-        } else {
-            BookNotFoundDetails details = new BookNotFoundDetails();
-            details.setId(Long.parseLong(id));
-            throw new BookNotFoundFault(details);
         }
+        BookNotFoundDetails details = new BookNotFoundDetails();
+        details.setId(Long.parseLong(id));
+        throw new BookNotFoundFault(details);
     }
-    
+
     @Path("/booksubresource/{bookId}/")
     public Book getBookSubResource(@PathParam("bookId") String id) throws BookNotFoundFault {
         Book book = books.get(Long.parseLong(id));
         if (book != null) {
             return book;
-        } else {
-            BookNotFoundDetails details = new BookNotFoundDetails();
-            details.setId(Long.parseLong(id));
-            throw new BookNotFoundFault(details);
         }
+        BookNotFoundDetails details = new BookNotFoundDetails();
+        details.setId(Long.parseLong(id));
+        throw new BookNotFoundFault(details);
     }
-    
+
     @Path("/booksubresource/context")
     public Book2 getBookSubResourceRC() {
         Book2 book = resourceContext.getResource(Book2.class);
         book.checkContext();
         return book;
     }
-    
+
     @Path("/booksubresource/instance/context")
     public Book2 getBookSubResourceInstanceRC(@Context ResourceContext rc) {
         return rc.initResource(book2Sub);
     }
-    
+
+    @Path("/booksubresource/class/context")
+    public Class<Book2> getBookSubResourceClass() {
+        return Book2.class;
+    }
+
     @Path("/booksubresourceobject/{bookId}/")
     public Object getBookSubResourceObject(@PathParam("bookId") String id) throws BookNotFoundFault {
         return getBookSubResource(id);
     }
-    
+
     @GET
     @Path("/booknames/{bookId}/")
     @Produces("text/*")
     public String getBookName(@PathParam("bookId") int id) throws BookNotFoundFault {
-        Book book = books.get(new Long(id));
+        Book book = books.get(Long.valueOf(id));
         if (book != null) {
             return book.getName();
-        } else {
-            BookNotFoundDetails details = new BookNotFoundDetails();
-            details.setId(id);
-            throw new BookNotFoundFault(details);
         }
+        BookNotFoundDetails details = new BookNotFoundDetails();
+        details.setId(id);
+        throw new BookNotFoundFault(details);
     }
 
     @POST
@@ -1345,7 +1395,7 @@ public class BookStore {
         }
         return new Book("Default Book", 222L);
     }
-    
+
     @POST
     @Path("/books")
     @Produces("text/xml")
@@ -1357,12 +1407,12 @@ public class BookStore {
         if (!("application/xml".equals(ct1) && ct1.equals(ct2) && ct1.equals(ct3))) {
             throw new RuntimeException("Unexpected content type");
         }
-        
+
         book.setId(bookId + 1);
         URI uri = ui.getRequestUriBuilder().path(Long.toString(book.getId())).build();
         return Response.ok(book).location(uri).build();
     }
-    
+
     @POST
     @Path("/books2")
     @Produces("text/xml")
@@ -1370,7 +1420,7 @@ public class BookStore {
     public Book addBook2(Book book) {
         return new Book("Book echo", book.getId() + 1);
     }
-    
+
     @POST
     @Path("/oneway")
     @Oneway
@@ -1379,7 +1429,7 @@ public class BookStore {
             throw new WebApplicationException();
         }
     }
-    
+
     @POST
     @Path("/books/customstatus")
     @Produces("application/xml")
@@ -1390,12 +1440,12 @@ public class BookStore {
         book.setId(888);
         return book;
     }
-    
+
     @POST
     @Path("/booksinfo")
     @Produces("text/xml")
     @Consumes("application/xml")
-    public Response addBook(@XmlJavaTypeAdapter(BookInfoAdapter.class) 
+    public Response addBook(@XmlJavaTypeAdapter(BookInfoAdapter.class)
                             BookInfo bookInfo) {
         return Response.ok(bookInfo.asBook()).build();
     }
@@ -1407,7 +1457,7 @@ public class BookStore {
     public Response addBinaryBook(long[] book) {
         return Response.ok(book).build();
     }
-    
+
     @PUT
     @Path("/books/")
     public Response updateBook(Book book) {
@@ -1422,7 +1472,7 @@ public class BookStore {
 
         return r;
     }
-    
+
     @PUT
     @Path("/books/{id}")
     public Response createBook(@PathParam("id") Long id) {
@@ -1439,14 +1489,14 @@ public class BookStore {
 
         return r;
     }
-    
+
     @PUT
     @Path("/bookswithdom/")
     public DOMSource updateBook(DOMSource ds) {
         //XMLUtils.printDOM(ds.getNode());
         return ds;
     }
-    
+
     @PUT
     @Path("/bookswithjson/")
     @Consumes("application/json")
@@ -1477,14 +1527,14 @@ public class BookStore {
 
         return r;
     }
-    
+
     @DELETE
     @Path("/books/id")
     public Response deleteWithQuery(@QueryParam("value") @DefaultValue("-1") int id) {
         if (id != 123) {
             throw new WebApplicationException();
         }
-        Book b = books.get(new Long(id));
+        Book b = books.get(Long.valueOf(id));
 
         Response r;
         if (b != null) {
@@ -1501,9 +1551,9 @@ public class BookStore {
     @Consumes("text/plain")
     @Produces("text/plain")
     public Long echoBookId(long theBookId) {
-        return new Long(theBookId);
+        return Long.valueOf(theBookId);
     }
-       
+
     @POST
     @Path("/booksecho")
     @Consumes("text/plain")
@@ -1511,12 +1561,12 @@ public class BookStore {
     public Response echoBookNameAndHeader(@HeaderParam("CustomHeader") String headerValue, String name) {
         return Response.ok().entity(name).header("CustomHeader", headerValue).build();
     }
-    
+
     @Path("/bookstoresub")
     public BookStore echoThroughBookStoreSub() {
         return this;
     }
-    
+
     @Path("/customresponse")
     @GET
     @Produces("application/xml")
@@ -1524,7 +1574,7 @@ public class BookStore {
         return new CustomResponse(
             Response.ok().entity(new Book("Book", 222L)).header("customresponse", "OK").build());
     }
-    
+
     @POST
     @Path("/booksecho2")
     @Consumes("text/plain")
@@ -1532,7 +1582,7 @@ public class BookStore {
     public Response echoBookNameAndHeader2(String name) {
         return echoBookNameAndHeader(httpHeaders.getRequestHeader("CustomHeader").get(0), name);
     }
-    
+
     @POST
     @Path("/booksecho3")
     @Consumes("text/plain")
@@ -1540,7 +1590,7 @@ public class BookStore {
     public Response echoBookNameAndHeader3(String name) {
         return echoBookNameAndHeader(httpHeaders.getRequestHeader("customheader").get(0), name);
     }
-    
+
     @POST
     @Path("/booksecho202")
     @Consumes("text/plain")
@@ -1548,25 +1598,21 @@ public class BookStore {
     public Response echoBookName202(String name) {
         return Response.accepted(name).build();
     }
-        
-    
+
+
     @GET
     @Path("/cd/{CDId}/")
     public CD getCD() {
-        CD cd = cds.get(Long.parseLong(currentCdId));
-
-        return cd;
+        return cds.get(Long.parseLong(currentCdId));
     }
 
     @GET
     @Path("/cdwithmultitypes/{CDId}/")
-    @Produces({"application/xml", "application/bar+xml", "application/json" }) 
+    @Produces({"application/xml", "application/bar+xml", "application/json" })
     public CD getCDWithMultiContentTypes(@PathParam("CDId") String id) {
-        CD cd = cds.get(Long.parseLong(id));
-
-        return cd;
+        return cds.get(Long.parseLong(id));
     }
-    
+
     @GET
     @Path("/cds/")
     public CDs getCDs() {
@@ -1622,13 +1668,21 @@ public class BookStore {
     public BookSubresource getBookFromSubresource() {
         return new BookSubresourceImpl();
     }
-    
+
+    @POST
+    @Path("/entityecho")
+    @Consumes("text/plain")
+    @Produces("text/plain")
+    public Response echoEntity(String entity) {
+        return Response.ok().entity(entity).build();
+    }
+
     public final String init() {
         books.clear();
         cds.clear();
         bookId = 123;
-        cdId = 123;        
-        
+        cdId = 123;
+
         Book book = new Book();
         book.setId(bookId);
         book.setName("CXF in Action");
@@ -1644,22 +1698,22 @@ public class BookStore {
         cds.put(cd1.getId(), cd1);
         return "OK";
     }
-    
+
     @XmlJavaTypeAdapter(BookInfoAdapter2.class)
     interface BookInfoInterface {
         String getName();
-        
+
         long getId();
     }
-    
+
     static class BookInfo {
         private String name;
         private long id;
-        
+
         BookInfo() {
-            
+
         }
-        
+
         BookInfo(Book b) {
             this.name = b.getName();
             this.id = b.getId();
@@ -1667,15 +1721,15 @@ public class BookStore {
                 id = 124;
             }
         }
-        
+
         public String getName() {
             return name;
         }
-        
+
         public long getId() {
             return id;
         }
-       
+
         public Book asBook() {
             Book b = new Book();
             b.setId(id);
@@ -1683,17 +1737,17 @@ public class BookStore {
             return b;
         }
     }
-    
+
     static class BookInfo2 extends BookInfo implements BookInfoInterface {
         BookInfo2() {
-            
+
         }
-        
+
         BookInfo2(Book b) {
             super(b);
         }
     }
-        
+
     public static class BookInfoAdapter2 extends XmlAdapter<Book, BookInfo2> {
         @Override
         public Book marshal(BookInfo2 v) throws Exception {
@@ -1705,7 +1759,7 @@ public class BookStore {
             return new BookInfo2(b);
         }
     }
-    
+
     public static class BookInfoAdapter extends XmlAdapter<Book, BookInfo> {
 
         @Override
@@ -1717,34 +1771,33 @@ public class BookStore {
         public BookInfo unmarshal(Book b) throws Exception {
             return new BookInfo(b);
         }
-        
+
     }
-    
+
     static class BadBook {
         BadBook(String s) {
             throw new RuntimeException("The bad book");
         }
     }
-    
+
     private static class StreamingOutputImpl implements StreamingOutput {
 
         private boolean failEarly;
-        
+
         StreamingOutputImpl(boolean failEarly) {
             this.failEarly = failEarly;
         }
-        
+
         public void write(OutputStream output) throws IOException, WebApplicationException {
             if (failEarly) {
                 throw new WebApplicationException(
                      Response.status(410).header("content-type", "text/plain")
                      .entity("This is supposed to go on the wire").build());
-            } else {
-                output.write("This is not supposed to go on the wire".getBytes());
-                throw new WebApplicationException(410);
             }
-        } 
-        
+            output.write("This is not supposed to go on the wire".getBytes());
+            throw new WebApplicationException(410);
+        }
+
     }
     private class ResponseStreamingOutputImpl implements StreamingOutput {
         public void write(OutputStream output) throws IOException, WebApplicationException {
@@ -1752,29 +1805,29 @@ public class BookStore {
                 throw new RuntimeException();
             }
             BookStore.this.messageContext.put(Message.RESPONSE_CODE, 503);
-            MultivaluedMap<String, String> headers = new MetadataMap<String, String>();
+            MultivaluedMap<String, String> headers = new MetadataMap<>();
             headers.putSingle("Content-Type", "text/custom+plain");
             headers.putSingle("CustomHeader", "CustomValue");
             BookStore.this.messageContext.put(Message.PROTOCOL_HEADERS, headers);
-            
+
             output.write("Response is not available".getBytes());
-        } 
-        
+        }
+
     }
-    
+
     private Book createCglibProxy(final Book book) {
         final InvocationHandler handler = new InvocationHandler() {
 
             public Object invoke(Object object, Method method, Object[] args) throws Throwable {
                 return method.invoke(book, args);
             }
-            
+
         };
-        return (Book)ProxyHelper.getProxy(this.getClass().getClassLoader(), 
-                                    new Class[]{Book.class}, 
+        return (Book)ProxyHelper.getProxy(this.getClass().getClassLoader(),
+                                    new Class[]{Book.class},
                                     handler);
     }
-    
+
     public abstract static class AbstractBookBean {
         @QueryParam("id_2")
         private long id2;
@@ -1786,11 +1839,11 @@ public class BookStore {
             this.id2 = id2;
         }
     }
-    
+
     public static class BookBean extends AbstractBookBean {
         private long id;
-        
-        
+
+
         private long id3;
         private BookBeanNested nested;
 
@@ -1802,7 +1855,7 @@ public class BookStore {
         public void setId(long id) {
             this.id = id;
         }
-        
+
         @Context
         public void setUriInfo(UriInfo ui) {
             String id3Value = ui.getQueryParameters().getFirst("id3");
@@ -1824,9 +1877,13 @@ public class BookStore {
             this.nested = nested;
         }
 
-        
+
     }
-    
+
+    public static class BookBeanExtended extends BookBean {
+
+    }
+
     public static class BookBeanNested {
         private long id4;
 
@@ -1837,13 +1894,13 @@ public class BookStore {
         public void setId4(long id4) {
             this.id4 = id4;
         }
-        
+
     }
-    
+
     public static class BookBean2 {
         private long id;
         @QueryParam("id_2")
-        private long id2;
+        private long mId2;
         private long id3;
         public long getId() {
             return id;
@@ -1853,15 +1910,15 @@ public class BookStore {
         public void setId(long id) {
             this.id = id;
         }
-        
+
         public long getId2() {
-            return id2;
+            return mId2;
         }
 
         public void setId2(long id2) {
-            this.id2 = id2;
+            this.mId2 = id2;
         }
-        
+
         @Context
         public void setUriInfo(UriInfo ui) {
             String id3Value = ui.getQueryParameters().getFirst("id3");
@@ -1874,7 +1931,7 @@ public class BookStore {
             return id3;
         }
     }
-    
+
     public static class BookNotReturnedException extends RuntimeException {
 
         private static final long serialVersionUID = 4935423670510083220L;
@@ -1882,9 +1939,9 @@ public class BookStore {
         public BookNotReturnedException(String errorMessage) {
             super(errorMessage);
         }
-        
+
     }
-    
+
     private Annotation[] getExtraAnnotations() {
         try {
             Method m = BookBean.class.getMethod("setUriInfo", new Class[]{UriInfo.class});
@@ -1893,8 +1950,8 @@ public class BookStore {
             throw new RuntimeException(ex);
         }
     }
-    
-    public static class StringArrayBodyReaderWriter 
+
+    public static class StringArrayBodyReaderWriter
         implements MessageBodyReader<String[]>, MessageBodyWriter<String[]> {
         public boolean isReadable(Class<?> arg0, Type arg1, Annotation[] arg2, MediaType arg3) {
             return String[].class.isAssignableFrom(arg0);
@@ -1921,11 +1978,11 @@ public class BookStore {
         }
 
     }
-        
-    public static class StringListBodyReaderWriter 
+
+    public static class StringListBodyReaderWriter
         implements MessageBodyReader<List<String>>, MessageBodyWriter<List<String>> {
         public boolean isReadable(Class<?> arg0, Type arg1, Annotation[] arg2, MediaType arg3) {
-            return List.class.isAssignableFrom(arg0) 
+            return List.class.isAssignableFrom(arg0)
                 && String.class == InjectionUtils.getActualType(arg1);
         }
 
@@ -1940,7 +1997,7 @@ public class BookStore {
         }
 
         public boolean isWriteable(Class<?> arg0, Type arg1, Annotation[] arg2, MediaType arg3) {
-            return List.class.isAssignableFrom(arg0) 
+            return List.class.isAssignableFrom(arg0)
                 && String.class == InjectionUtils.getActualType(arg1);
         }
 
@@ -1951,13 +2008,13 @@ public class BookStore {
         }
 
     }
-    
-    public static class PrimitiveIntArrayReaderWriter 
+
+    public static class PrimitiveIntArrayReaderWriter
         implements MessageBodyReader<int[]>, MessageBodyWriter<int[]> {
         public boolean isReadable(Class<?> arg0, Type arg1, Annotation[] arg2, MediaType arg3) {
             return int[].class.isAssignableFrom(arg0);
         }
-    
+
         public int[] readFrom(Class<int[]> arg0, Type arg1,
             Annotation[] arg2, MediaType arg3, MultivaluedMap<String, String> arg4, InputStream arg5)
             throws IOException, WebApplicationException {
@@ -1967,21 +2024,21 @@ public class BookStore {
                 intArr[i] = Integer.valueOf(stringArr[i]);
             }
             return intArr;
-            
+
         }
-    
+
         public long getSize(int[] arg0, Class<?> arg1, Type arg2, Annotation[] arg3, MediaType arg4) {
             return -1;
         }
-    
+
         public boolean isWriteable(Class<?> arg0, Type arg1, Annotation[] arg2, MediaType arg3) {
             return int[].class.isAssignableFrom(arg0);
         }
-    
+
         public void writeTo(int[] arg0, Class<?> arg1, Type arg2, Annotation[] arg3, MediaType arg4,
                             MultivaluedMap<String, Object> arg5, OutputStream arg6) throws IOException,
             WebApplicationException {
-            
+
             StringBuilder sb = new StringBuilder();
             for (int i = 0; i < arg0.length; i++) {
                 sb.append(Integer.toString(arg0[i]));
@@ -1991,14 +2048,14 @@ public class BookStore {
             }
             arg6.write(sb.toString().getBytes());
         }
-    
+
     }
-    public static class PrimitiveDoubleArrayReaderWriter 
+    public static class PrimitiveDoubleArrayReaderWriter
         implements MessageBodyReader<Object>, MessageBodyWriter<Object> {
         public boolean isReadable(Class<?> arg0, Type arg1, Annotation[] arg2, MediaType arg3) {
             return double[].class.isAssignableFrom(arg0);
         }
-    
+
         public Object readFrom(Class<Object> arg0, Type arg1,
             Annotation[] arg2, MediaType arg3, MultivaluedMap<String, String> arg4, InputStream arg5)
             throws IOException, WebApplicationException {
@@ -2008,21 +2065,21 @@ public class BookStore {
                 intArr[i] = Double.valueOf(stringArr[i]);
             }
             return intArr;
-            
+
         }
-    
+
         public long getSize(Object arg0, Class<?> arg1, Type arg2, Annotation[] arg3, MediaType arg4) {
             return -1;
         }
-    
+
         public boolean isWriteable(Class<?> arg0, Type arg1, Annotation[] arg2, MediaType arg3) {
             return double[].class.isAssignableFrom(arg0);
         }
-    
+
         public void writeTo(Object arg0, Class<?> arg1, Type arg2, Annotation[] arg3, MediaType arg4,
                             MultivaluedMap<String, Object> arg5, OutputStream arg6) throws IOException,
             WebApplicationException {
-            
+
             double[] arr = (double[])arg0;
             StringBuilder sb = new StringBuilder();
             for (int i = 0; i < arr.length; i++) {
@@ -2033,8 +2090,20 @@ public class BookStore {
             }
             arg6.write(sb.toString().getBytes());
         }
-    
-    }    
+
+    }
+    public static class BookStoreSub {
+        BookStore bookStore;
+        public BookStoreSub(BookStore bookStore) {
+            this.bookStore = bookStore;
+        }
+        @GET
+        @Path("/beanparam/{id}")
+        @Produces("application/xml")
+        public Book getBeanParamBook(@BeanParam BookBeanExtended bean) {
+            return bookStore.getBeanParamBook(bean);
+        }
+    }
 }
 
 
