@@ -20,15 +20,15 @@ package org.apache.cxf.systest.exception;
 
 import javax.jws.WebService;
 
-@WebService(serviceName = "HelloService", 
-            portName = "HelloPort", 
-            endpointInterface = "org.apache.cxf.systest.exception.GenericsEcho", 
+@WebService(serviceName = "HelloService",
+            portName = "HelloPort",
+            endpointInterface = "org.apache.cxf.systest.exception.GenericsEcho",
             targetNamespace = "http://cxf.apache.org/test/HelloService")
 public class GenericsEchoImpl {
     public String echo(String request) throws GenericsException {
         GenericsException exception = new GenericsException();
-        ObjectWithGenerics<Boolean, Integer> objs = 
-            new ObjectWithGenerics<Boolean, Integer>(Boolean.TRUE, new Integer(100));
+        ObjectWithGenerics<Boolean, Integer> objs =
+            new ObjectWithGenerics<Boolean, Integer>(Boolean.TRUE, Integer.valueOf(100));
         exception.setObj(objs);
         throw exception;
     }
