@@ -25,7 +25,9 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.Executor;
+import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.TimeUnit;
 import java.util.logging.Logger;
 
 import javax.jws.WebService;
@@ -56,12 +58,16 @@ import org.apache.cxf.ws.rm.RMManager;
 import org.junit.After;
 import org.junit.Test;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
+
 /**
  * Tests the operation of InOrder delivery assurance for one-way messages to the server.
  */
 public class DeliveryAssuranceOnewayTest extends AbstractBusClientServerTestBase {
     public static final String PORT = allocatePort(DeliveryAssuranceOnewayTest.class);
-    private static final String GREETER_ADDRESS 
+    private static final String GREETER_ADDRESS
         = "http://localhost:" + PORT + "/SoapContext/GreeterPort";
 
     private static final Logger LOG = LogUtils.getLogger(DeliveryAssuranceOnewayTest.class);
@@ -70,7 +76,7 @@ public class DeliveryAssuranceOnewayTest extends AbstractBusClientServerTestBase
     private Endpoint endpoint;
     private Bus greeterBus;
     private Greeter greeter;
-    
+
     @After
     public void tearDown() throws Exception {
         try {
@@ -86,30 +92,30 @@ public class DeliveryAssuranceOnewayTest extends AbstractBusClientServerTestBase
         Thread.sleep(100);
     }
 
-    @Test    
+    @Test
     public void testAtLeastOnce() throws Exception {
         testOnewayAtLeastOnce(null);
     }
-    
-    @Test    
+
+    @Test
     public void testAtLeastOnceAsyncExecutor() throws Exception {
         testOnewayAtLeastOnce(Executors.newSingleThreadExecutor());
-    } 
+    }
 
     private void testOnewayAtLeastOnce(Executor executor) throws Exception {
         init("org/apache/cxf/systest/ws/rm/atleastonce.xml", executor);
-        
+
         greeterBus.getOutInterceptors().add(new MessageLossSimulator());
         RMManager manager = greeterBus.getExtension(RMManager.class);
-        manager.getConfiguration().setBaseRetransmissionInterval(new Long(1000));
+        manager.getConfiguration().setBaseRetransmissionInterval(Long.valueOf(1000));
         String[] callArgs = new String[] {"one", "two", "three", "four", "five", "six",
                                           "seven", "eight", "nine"};
         for (int i = 0; i < callArgs.length; i++) {
             greeter.greetMeOneWay(callArgs[i]);
         }
-        
+
         awaitMessages(callArgs.length, 1, 3000);
-        
+
         List<String> actualArgs = GreeterProvider.CALL_ARGS;
         int checkCount = 0;
         for (int i = 0; i < callArgs.length; i++) {
@@ -132,27 +138,27 @@ public class DeliveryAssuranceOnewayTest extends AbstractBusClientServerTestBase
         assertTrue("Too few messages " + actualArgs.size(), callArgs.length <= actualArgs.size());
     }
 
-    @Test    
+    @Test
     public void testAtMostOnce() throws Exception {
         testOnewayAtMostOnce(null);
     }
-    
-    @Test    
+
+    @Test
     public void testAtMostOnceAsyncExecutor() throws Exception {
         testOnewayAtMostOnce(Executors.newSingleThreadExecutor());
-    } 
+    }
 
     private void testOnewayAtMostOnce(Executor executor) throws Exception {
         init("org/apache/cxf/systest/ws/rm/atmostonce.xml", executor);
-        
+
         greeterBus.getOutInterceptors().add(new MessageLossSimulator());
         RMManager manager = greeterBus.getExtension(RMManager.class);
-        manager.getConfiguration().setBaseRetransmissionInterval(new Long(2000));
+        manager.getConfiguration().setBaseRetransmissionInterval(Long.valueOf(2000));
         String[] callArgs = new String[] {"one", "two", "three", "four"};
         for (int i = 0; i < callArgs.length; i++) {
             greeter.greetMeOneWay(callArgs[i]);
         }
-        
+
         awaitMessages(callArgs.length, 1000, 60000);
         List<String> actualArgs = GreeterProvider.CALL_ARGS;
         assertTrue("Too many messages", callArgs.length >= actualArgs.size());
@@ -163,30 +169,30 @@ public class DeliveryAssuranceOnewayTest extends AbstractBusClientServerTestBase
                 }
             }
         }
-        
+
     }
 
-    @Test    
+    @Test
     public void testExactlyOnce() throws Exception {
         testOnewayExactlyOnce(null);
     }
-    
-    @Test    
+
+    @Test
     public void testExactlyOnceAsyncExecutor() throws Exception {
         testOnewayExactlyOnce(Executors.newSingleThreadExecutor());
-    } 
+    }
 
     private void testOnewayExactlyOnce(Executor executor) throws Exception {
         init("org/apache/cxf/systest/ws/rm/exactlyonce.xml", executor);
-        
+
         greeterBus.getOutInterceptors().add(new MessageLossSimulator());
         RMManager manager = greeterBus.getExtension(RMManager.class);
-        manager.getConfiguration().setBaseRetransmissionInterval(new Long(2000));
+        manager.getConfiguration().setBaseRetransmissionInterval(Long.valueOf(2000));
         String[] callArgs = new String[] {"one", "two", "three", "four"};
         for (int i = 0; i < callArgs.length; i++) {
             greeter.greetMeOneWay(callArgs[i]);
         }
-        
+
         awaitMessages(callArgs.length, 1000, 60000);
         List<String> actualArgs = GreeterProvider.CALL_ARGS;
         assertEquals("Wrong message count", callArgs.length, actualArgs.size());
@@ -202,30 +208,30 @@ public class DeliveryAssuranceOnewayTest extends AbstractBusClientServerTestBase
                 fail("No match for request " + callArgs[i]);
             }
         }
-        
+
     }
 
-    @Test    
+    @Test
     public void testInOrder() throws Exception {
         testOnewayInOrder(null);
     }
-    
-    @Test    
+
+    @Test
     public void testInOrderAsyncExecutor() throws Exception {
         testOnewayInOrder(Executors.newSingleThreadExecutor());
-    } 
+    }
 
     private void testOnewayInOrder(Executor executor) throws Exception {
         init("org/apache/cxf/systest/ws/rm/inorder.xml", executor);
-        
+
         greeterBus.getOutInterceptors().add(new MessageLossSimulator());
         RMManager manager = greeterBus.getExtension(RMManager.class);
-        manager.getConfiguration().setBaseRetransmissionInterval(new Long(2000));
+        manager.getConfiguration().setBaseRetransmissionInterval(Long.valueOf(2000));
         String[] callArgs = new String[] {"one", "two", "three", "four"};
         for (int i = 0; i < callArgs.length; i++) {
             greeter.greetMeOneWay(callArgs[i]);
         }
-        
+
         awaitMessages(callArgs.length - 2, 1000, 60000);
         List<String> actualArgs = GreeterProvider.CALL_ARGS;
         int argNum = 0;
@@ -237,27 +243,65 @@ public class DeliveryAssuranceOnewayTest extends AbstractBusClientServerTestBase
         }
     }
 
-    @Test    
+    @Test
+    public void testOnewayAtLeastOnceInOrderDelay() throws Exception {
+        int numMessages = 4;
+        init("org/apache/cxf/systest/ws/rm/atleastonce-inorder.xml", null);
+        ExecutorService executor = Executors.newFixedThreadPool(10);
+        SingleMessageDelaySimulator sps = new SingleMessageDelaySimulator();
+        sps.setDelay(600L);
+        greeterBus.getOutInterceptors().add(sps);
+        int num = 1;
+        greeter.greetMe(Integer.toString(num++));
+        for (int c = 2; c <= numMessages; c++) {
+            final int currentNum = num++;
+            Thread.sleep(100);
+            executor.submit(new Runnable() {
+
+                @Override
+                public void run() {
+                    greeter.greetMe(Integer.toString(currentNum));
+                }
+            });
+        }
+        executor.shutdown();
+        executor.awaitTermination(10, TimeUnit.SECONDS);
+        LOG.info("Waiting for " + numMessages + " messages to arrive");
+        awaitMessages(numMessages, 1000, 10000);
+        List<String> actualArgs = GreeterProvider.CALL_ARGS;
+        assertEquals("Some messages were not received", numMessages, actualArgs.size());
+        assertInOrder(actualArgs);
+    }
+
+    private void assertInOrder(List<String> actualArgs) {
+        int argNum = 0;
+        for (String actual : actualArgs) {
+            argNum++;
+            assertEquals(Integer.toString(argNum), actual);
+        }
+    }
+
+    @Test
     public void testAtMostOnceInOrder() throws Exception {
         testOnewayAtMostOnceInOrder(null);
     }
-    
-    @Test    
+
+    @Test
     public void testAtMostOnceInOrderAsyncExecutor() throws Exception {
         testOnewayAtMostOnceInOrder(Executors.newSingleThreadExecutor());
-    } 
+    }
 
     private void testOnewayAtMostOnceInOrder(Executor executor) throws Exception {
         init("org/apache/cxf/systest/ws/rm/atmostonce-inorder.xml", executor);
-        
+
         greeterBus.getOutInterceptors().add(new MessageLossSimulator());
         RMManager manager = greeterBus.getExtension(RMManager.class);
-        manager.getConfiguration().setBaseRetransmissionInterval(new Long(2000));
+        manager.getConfiguration().setBaseRetransmissionInterval(Long.valueOf(2000));
         String[] callArgs = new String[] {"one", "two", "three", "four"};
         for (int i = 0; i < callArgs.length; i++) {
             greeter.greetMeOneWay(callArgs[i]);
         }
-        
+
         awaitMessages(callArgs.length - 2, 1000, 60000);
         List<String> actualArgs = GreeterProvider.CALL_ARGS;
         assertTrue("Too many messages", callArgs.length >= actualArgs.size());
@@ -270,27 +314,27 @@ public class DeliveryAssuranceOnewayTest extends AbstractBusClientServerTestBase
         }
     }
 
-    @Test    
+    @Test
     public void testExactlyOnceInOrder() throws Exception {
         testOnewayExactlyOnceInOrder(null);
     }
-    
-    @Test    
+
+    @Test
     public void testExactlyOnceInOrderAsyncExecutor() throws Exception {
         testOnewayExactlyOnceInOrder(Executors.newSingleThreadExecutor());
     }
 
     private void testOnewayExactlyOnceInOrder(Executor executor) throws Exception {
         init("org/apache/cxf/systest/ws/rm/exactlyonce-inorder.xml", executor);
-        
+
         greeterBus.getOutInterceptors().add(new MessageLossSimulator());
         RMManager manager = greeterBus.getExtension(RMManager.class);
-        manager.getConfiguration().setBaseRetransmissionInterval(new Long(2000));
+        manager.getConfiguration().setBaseRetransmissionInterval(Long.valueOf(2000));
         String[] callArgs = new String[] {"one", "two", "three", "four"};
         for (int i = 0; i < callArgs.length; i++) {
             greeter.greetMeOneWay(callArgs[i]);
         }
-        
+
         awaitMessages(callArgs.length, 1000, 60000);
         List<String> actualArgs = GreeterProvider.CALL_ARGS;
         assertEquals("Wrong number of messages", callArgs.length, actualArgs.size());
@@ -306,20 +350,20 @@ public class DeliveryAssuranceOnewayTest extends AbstractBusClientServerTestBase
     // --- test utilities ---
 
     private void init(String cfgResource, Executor executor) {
-        
+
         SpringBusFactory bf = new SpringBusFactory();
         initServer(bf, cfgResource);
         initGreeterBus(bf, cfgResource);
         initProxy(executor);
     }
-    
+
     private void initServer(SpringBusFactory bf, String cfgResource) {
-        String derbyHome = System.getProperty("derby.system.home"); 
+        String derbyHome = System.getProperty("derby.system.home");
         try {
             synchronized (GreeterProvider.CALL_ARGS) {
                 GreeterProvider.CALL_ARGS.clear();
             }
-            System.setProperty("derby.system.home", derbyHome + "-server");   
+            System.setProperty("derby.system.home", derbyHome + "-server");
             serverBus = bf.createBus(cfgResource);
             BusFactory.setDefaultBus(serverBus);
             LOG.info("Initialised bus " + serverBus + " with cfg file resource: " + cfgResource);
@@ -333,7 +377,7 @@ public class DeliveryAssuranceOnewayTest extends AbstractBusClientServerTestBase
             }
         }
     }
-    
+
     private void initGreeterBus(SpringBusFactory bf,
                                 String cfgResource) {
         greeterBus = bf.createBus(cfgResource);
@@ -341,13 +385,13 @@ public class DeliveryAssuranceOnewayTest extends AbstractBusClientServerTestBase
         LOG.fine("Initialised greeter bus with configuration: " + cfgResource);
     }
 
-    private void initProxy(Executor executor) {        
+    private void initProxy(Executor executor) {
         GreeterService gs = new GreeterService();
 
         if (null != executor) {
             gs.setExecutor(executor);
         }
-   
+
         greeter = gs.getGreeterPort();
         try {
             updateAddressPort(greeter, PORT);
@@ -358,10 +402,10 @@ public class DeliveryAssuranceOnewayTest extends AbstractBusClientServerTestBase
 
         ConnectionHelper.setKeepAliveConnection(greeter, false);
     }
-    
+
     private void stopClient() {
         if (null != greeterBus) {
-            
+
             //ensure we close the decoupled destination of the conduit,
             //so that release the port if the destination reference count hit zero
             if (greeter != null) {
@@ -372,7 +416,7 @@ public class DeliveryAssuranceOnewayTest extends AbstractBusClientServerTestBase
             greeterBus = null;
         }
     }
-    
+
     private void stopServer() {
         if (null != endpoint) {
             LOG.info("Stopping Greeter endpoint");
@@ -386,7 +430,7 @@ public class DeliveryAssuranceOnewayTest extends AbstractBusClientServerTestBase
             serverBus = null;
         }
     }
-    
+
     /**
      * @param nExpectedIn number of messages to wait for
      * @param delay added delay before return (in case more are coming)
@@ -396,7 +440,7 @@ public class DeliveryAssuranceOnewayTest extends AbstractBusClientServerTestBase
         int waited = 0;
         int nIn = 0;
         long start = System.currentTimeMillis();
-        while (waited <= timeout) {                
+        while (waited <= timeout) {
             synchronized (GreeterProvider.CALL_ARGS) {
                 nIn = GreeterProvider.CALL_ARGS.size();
             }
@@ -429,8 +473,8 @@ public class DeliveryAssuranceOnewayTest extends AbstractBusClientServerTestBase
                 wsdlLocation = "/wsdl/greeter_control.wsdl")
     @ServiceMode(Mode.PAYLOAD)
     public static class GreeterProvider implements Provider<Source> {
-        
-        public static final List<String> CALL_ARGS = new ArrayList<String>();
+
+        public static final List<String> CALL_ARGS = new ArrayList<>();
 
         public Source invoke(Source obj) {
 
@@ -443,8 +487,8 @@ public class DeliveryAssuranceOnewayTest extends AbstractBusClientServerTestBase
             if (el instanceof Document) {
                 el = ((Document)el).getDocumentElement();
             }
-            
-            Map<String, String> ns = new HashMap<String, String>();
+
+            Map<String, String> ns = new HashMap<>();
             ns.put("ns", "http://cxf.apache.org/greeter_control/types");
             XPathUtils xp = new XPathUtils(ns);
             String s = (String)xp.getValue("/ns:greetMe/ns:requestType",
@@ -459,17 +503,16 @@ public class DeliveryAssuranceOnewayTest extends AbstractBusClientServerTestBase
                     CALL_ARGS.add(s);
                 }
                 return null;
-            } else {
-                synchronized (CALL_ARGS) {
-                    CALL_ARGS.add(s);
-                }
-                String resp =
-                    "<greetMeResponse "
-                        + "xmlns=\"http://cxf.apache.org/greeter_control/types\">"
-                        + "<responseType>" + s.toUpperCase() + "</responseType>"
-                    + "</greetMeResponse>";
-                return new StreamSource(new StringReader(resp));
             }
+            synchronized (CALL_ARGS) {
+                CALL_ARGS.add(s);
+            }
+            String resp =
+                "<greetMeResponse "
+                    + "xmlns=\"http://cxf.apache.org/greeter_control/types\">"
+                    + "<responseType>" + s.toUpperCase() + "</responseType>"
+                + "</greetMeResponse>";
+            return new StreamSource(new StringReader(resp));
         }
-    }    
+    }
 }
