@@ -37,20 +37,23 @@ import org.apache.cxf.ws.rm.RMManager;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
+
 /**
  * Tests the addition of WS-RM properties to application messages and the
  * exchange of WS-RM protocol messages.
  */
 public class RobustServiceAtMostOnceTest extends AbstractBusClientServerTestBase {
-    public static final String PORT = allocatePort(Server.class); 
-    public static final String GREETMEONEWAY_ACTION 
+    public static final String PORT = allocatePort(Server.class);
+    public static final String GREETMEONEWAY_ACTION
         = "http://cxf.apache.org/greeter_control/Greeter/greetMeOneWayRequest";
     private static final Logger LOG = LogUtils.getLogger(RobustServiceAtMostOnceTest.class);
-    
+
     private static GreeterCounterImpl serverGreeter;
     private Greeter greeter;
 
-    
+
     public static class Server extends AbstractBusTestServerBase {
         Endpoint ep;
         protected void run() {
@@ -59,7 +62,7 @@ public class RobustServiceAtMostOnceTest extends AbstractBusClientServerTestBase
             Bus bus = bf.createBus("/org/apache/cxf/systest/ws/rm/atmostonce.xml");
             BusFactory.setDefaultBus(bus);
             setBus(bus);
-            bus.getExtension(RMManager.class).getConfiguration().setAcknowledgementInterval(new Long(0));
+            bus.getExtension(RMManager.class).getConfiguration().setAcknowledgementInterval(Long.valueOf(0));
 
             // add some intentional processing delay at inbound
             SlowProcessingSimulator sps = new SlowProcessingSimulator();
@@ -68,7 +71,7 @@ public class RobustServiceAtMostOnceTest extends AbstractBusClientServerTestBase
             bus.getInInterceptors().add(sps);
             serverGreeter = new GreeterCounterImpl();
             String address = "http://localhost:" + PORT + "/SoapContext/GreeterPort";
-            
+
             // publish this robust oneway endpoint
             ep = Endpoint.create(serverGreeter);
             ep.getProperties().put(Message.ROBUST_ONEWAY, Boolean.TRUE);
@@ -86,25 +89,25 @@ public class RobustServiceAtMostOnceTest extends AbstractBusClientServerTestBase
     public static void startServers() throws Exception {
         assertTrue("server did not launch correctly", launchServer(Server.class, true));
     }
-    
-    @Test 
+
+    @Test
     public void testRobustAtMostOnceWithSlowProcessing() throws Exception {
         LOG.fine("Creating greeter client");
         SpringBusFactory bf = new SpringBusFactory();
         bus = bf.createBus("/org/apache/cxf/systest/ws/rm/seqlength1.xml");
         // set the client retry interval much shorter than the slow processing delay
-        RMManager manager = bus.getExtension(RMManager.class); 
-        manager.getConfiguration().setBaseRetransmissionInterval(new Long(3000));
+        RMManager manager = bus.getExtension(RMManager.class);
+        manager.getConfiguration().setBaseRetransmissionInterval(Long.valueOf(3000));
 
         BusFactory.setDefaultBus(bus);
         GreeterService gs = new GreeterService();
         greeter = gs.getGreeterPort();
         updateAddressPort(greeter, PORT);
-        
+
         LOG.fine("Invoking greeter");
         greeter.greetMeOneWay("one");
         Thread.sleep(10000);
-        
+
         assertEquals("invoked too many times", 1, serverGreeter.getCount());
         assertTrue("still in retransmission", manager.getRetransmissionQueue().isEmpty());
     }
@@ -116,7 +119,7 @@ public class RobustServiceAtMostOnceTest extends AbstractBusClientServerTestBase
             super.greetMeOneWay(arg0);
             count++;
         }
-        
+
         public int getCount() {
             return count;
         }
